@@ -72,19 +72,19 @@ import de.ipk_gatersleben.ag_nw.graffiti.plugins.layouters.graph_to_origin_mover
  * @author Christian Klukas
  */
 public class GraphHelper implements HelperClass {
-	
+
 	/**
 	 * displays a graph in the mainframe
 	 * 
 	 * @param the
-	 *           graph to be displayed
+	 *            graph to be displayed
 	 */
 	public static void diplayGraph(Graph g) {
 		EditorSession es = new EditorSession(g);
 
 		GravistoService.getInstance().getMainFrame().showViewChooserDialog(es, false, null);
 	}
-	
+
 	public static Graph createClusterReferenceGraph(Graph graph,
 			HashMap<String, Integer> clusterNodeIDandNumberOfContainingNodes) {
 		if (clusterNodeIDandNumberOfContainingNodes == null)
@@ -104,7 +104,7 @@ public class GraphHelper implements HelperClass {
 		for (Iterator<String> it = clusters.iterator(); it.hasNext();) {
 			Node clusterNode = clusterReferenceGraph.addNode();
 			String clusterID = it.next();
-			clusterNodeIDandNumberOfContainingNodes.put(clusterID, new Integer(0));
+			clusterNodeIDandNumberOfContainingNodes.put(clusterID, Integer.valueOf(0));
 			NodeTools.setClusterID(clusterNode, clusterID);
 			AttributeHelper.setDefaultGraphicsAttribute(clusterNode, pgg.getNextPosition());
 			AttributeHelper.setLabel(clusterNode, "Cluster " + clusterID);
@@ -129,8 +129,8 @@ public class GraphHelper implements HelperClass {
 			if (cluster.equals(""))
 				continue;
 			String cid = cluster;
-			clusterNodeIDandNumberOfContainingNodes.put(cid, new Integer(clusterNodeIDandNumberOfContainingNodes.get(cid)
-					.intValue() + 1));
+			clusterNodeIDandNumberOfContainingNodes.put(cid,
+					Integer.valueOf(clusterNodeIDandNumberOfContainingNodes.get(cid).intValue() + 1));
 			if (!cluster.equals(""))
 				for (Iterator<?> itOutN = graphNode.getOutNeighborsIterator(); itOutN.hasNext();) {
 					Node graphNodeNeighbor = (Node) itOutN.next();
@@ -147,24 +147,25 @@ public class GraphHelper implements HelperClass {
 							String id = cluster + "->" + neighborCluster;
 							String id2 = neighborCluster + "->" + cluster;
 							Edge knownEdge = knownEdges.get(id);
-							
+
 							// check also for the opposite direction (do not add
 							// a second edge in this case)
 							Edge knownEdge2 = knownEdges.get(id2);
 							if (knownEdge == null)
 								knownEdge = knownEdge2;
 							// ***
-							
+
 							if (knownEdge == null) {
-								Edge newEdge = clusterReferenceGraph.addEdge(clusterNodeA, clusterNodeB, true, AttributeHelper
-										.getDefaultGraphicsAttributeForEdge(Color.BLACK, Color.BLACK, true));
+								Edge newEdge = clusterReferenceGraph.addEdge(clusterNodeA, clusterNodeB, true,
+										AttributeHelper.getDefaultGraphicsAttributeForEdge(Color.BLACK, Color.BLACK,
+												true));
 								knownEdges.put(id, newEdge);
 								knownEdge = newEdge;
 							}
-							Integer edgeDoublingCount = (Integer) AttributeHelper.getAttributeValue(knownEdge, "cluster",
-									"edgecount", new Integer(0), null);
-							AttributeHelper.setAttribute(knownEdge, "cluster", "edgecount", new Integer(edgeDoublingCount
-									.intValue() + 1));
+							Integer edgeDoublingCount = (Integer) AttributeHelper.getAttributeValue(knownEdge,
+									"cluster", "edgecount", Integer.valueOf(0), null);
+							AttributeHelper.setAttribute(knownEdge, "cluster", "edgecount",
+									Integer.valueOf(edgeDoublingCount.intValue() + 1));
 						}
 					}
 				}
@@ -172,7 +173,7 @@ public class GraphHelper implements HelperClass {
 		clusterReferenceGraph.getListenerManager().transactionFinished(graph);
 		return clusterReferenceGraph;
 	}
-	
+
 	public static Graph getClusterSubGraph(Graph mainGraph, String validClusterID) {
 		AdjListGraph clusterSubGraph = new AdjListGraph(mainGraph, new ListenerManager());
 		ArrayList<Long> validNodeIDs = new ArrayList<Long>();
@@ -180,72 +181,72 @@ public class GraphHelper implements HelperClass {
 			Node n = (Node) it.next();
 			String clusterID = NodeTools.getClusterID(n, "");
 			if (clusterID.equals(validClusterID))
-				validNodeIDs.add(new Long(n.getID()));
+				validNodeIDs.add(Long.valueOf(n.getID()));
 		}
-		
+
 		ArrayList<org.graffiti.graph.Node> toBeDeleted = new ArrayList<org.graffiti.graph.Node>();
 		for (org.graffiti.graph.Node n : clusterSubGraph.getNodes()) {
-			if (!validNodeIDs.contains(new Long(n.getID()))) {
+			if (!validNodeIDs.contains(Long.valueOf(n.getID()))) {
 				toBeDeleted.add(n);
 			}
 		}
 		for (org.graffiti.graph.Node n : toBeDeleted)
 			clusterSubGraph.deleteNode(n);
-		
+
 		return clusterSubGraph;
 	}
-	
+
 	/**
 	 * gets the nodes which can be reached by the the specified nodes
 	 * 
 	 * @param startNode
-	 *           node to start with
+	 *            node to start with
 	 * @return set of reachable nodes
 	 */
 	public static Set<Node> getConnectedNodes(Node startNode) {
 		Stack<Node> stack = new Stack<Node>();
 		Set<Node> hashSet = new LinkedHashSet<Node>();
-		
+
 		stack.add(startNode);
 		hashSet.add(startNode);
-		
+
 		while (!stack.isEmpty()) {
 			Iterator<?> neighbours = stack.pop().getNeighborsIterator();
-			
+
 			while (neighbours.hasNext()) {
 				Node neighbour = (Node) neighbours.next();
-				
+
 				if (!hashSet.contains(neighbour)) {
 					hashSet.add(neighbour);
 					stack.push(neighbour);
 				}
 			}
 		}
-		
+
 		return hashSet;
 	}
-	
+
 	@SuppressWarnings("unchecked")
 	public static void getConnectedNodes(Node startNode, boolean directed, Set<Node> result) {
 		Stack<Node> stack = new Stack<Node>();
-		
+
 		stack.add(startNode);
-		
+
 		result.add(startNode);
-		
+
 		while (!stack.isEmpty()) {
 			Iterator<Node> neighbours;
-			
+
 			if (!directed)
 				neighbours = stack.pop().getNeighborsIterator();
 			else {
 				Node nnn = stack.pop();
 				neighbours = new MultipleIterator(nnn.getOutNeighborsIterator(), nnn.getUndirectedNeighborsIterator());
 			}
-			
+
 			while (neighbours.hasNext()) {
 				Node neighbour = neighbours.next();
-				
+
 				if (!result.contains(neighbour)) {
 					result.add(neighbour);
 					stack.push(neighbour);
@@ -253,23 +254,23 @@ public class GraphHelper implements HelperClass {
 			}
 		}
 	}
-	
+
 	/**
 	 * builds for all connected components a separate graph and returns them as a
 	 * collection of graphs
 	 * 
 	 * @param graph
-	 *           the graph to use
+	 *            the graph to use
 	 * @return a collection with all connected components as separate graphs
 	 */
 	public static Collection<Graph> getConnectedComponentsAsCopy(Graph graph) {
 		if (graph.getNumberOfNodes() <= 0)
 			return new ArrayList<Graph>();
-		
+
 		return getConnectedComponentsAsCopy(graph.getNodes());
-		
+
 	}
-	
+
 	public static Collection<Graph> getConnectedComponentsAsCopy(List<Node> nodes) {
 		ArrayList<Graph> graphList = new ArrayList<Graph>();
 		HashMap<Node, Node> sourceGraphNode2connectedGraphNode = new LinkedHashMap<Node, Node>();
@@ -293,66 +294,65 @@ public class GraphHelper implements HelperClass {
 		}
 		return graphList;
 	}
-	
+
 	public static Set<Set<Node>> getConnectedComponents(Collection<Node> nodes) {
 		Set<Set<Node>> nodeSetSet = new HashSet<Set<Node>>();
-		
+
 		// get all RefSets
 		Set<Node> allNodes = new HashSet<Node>(nodes);
-		
+
 		Set<Node> alreadyContainedNodes = new HashSet<Node>();
-		
+
 		for (Node refSet : allNodes) {
 			if (alreadyContainedNodes.contains(refSet))
 				// already in a labeled connected component
 				continue;
-			
+
 			// ##########################################################################
 			// new cc
-			
+
 			// #########################################
 			// set of unlabeled nodes
 			Set<Node> ccNodeSet = new HashSet<Node>();
 			nodeSetSet.add(ccNodeSet);
-			
+
 			// Set of unlabeled refSets to visit
 			Stack<Node> ccNodesToProcess = new Stack<Node>();
 			ccNodesToProcess.push(refSet);
-			
+
 			// #########################################
 			// find and add all connected refSets
 			while (!ccNodesToProcess.isEmpty()) {
 				Node actNodeToProcess = ccNodesToProcess.pop();
-				
+
 				// add new refSet
 				ccNodeSet.add(actNodeToProcess);
-				
+
 				// get all adjacent nodes
 				Set<Node> actNodeNeighbours = actNodeToProcess.getNeighbors();
-				
+
 				// add all new refSets
 				for (Node actRefSetNeighbour : actNodeNeighbours)
 					if (!ccNodeSet.contains(actRefSetNeighbour) && !ccNodesToProcess.contains(actRefSetNeighbour))
 						// new neighbour found
 						ccNodesToProcess.push(actRefSetNeighbour);
 			}
-			
+
 			// #########################################
 			// register all new refSets
 			alreadyContainedNodes.addAll(ccNodeSet);
 		}
-		
+
 		return nodeSetSet;
 	}
-	
-	
+
 	/**
 	 * Remove all bends from a graph
 	 */
 	public static void removeAllBends(Graph g, boolean enableUndo) {
 		removeBends(g, g.getEdges(), enableUndo);
 	}
-	
+
 	public static void removeBendsBetweenSelectedNodes(Collection<Node> nodes, boolean enableUndo) {
 		if (nodes == null || nodes.isEmpty())
 			return;
@@ -360,18 +360,18 @@ public class GraphHelper implements HelperClass {
 		Graph g = nodes.iterator().next().getGraph();
 		Set<Edge> setEdges = new HashSet<>();
 		for (Node n : nodes) {
-			for(Edge outEdge : n.getAllOutEdges())
-				if(setNodes.contains(outEdge.getSource()) && setNodes.contains(outEdge.getTarget()))
+			for (Edge outEdge : n.getAllOutEdges())
+				if (setNodes.contains(outEdge.getSource()) && setNodes.contains(outEdge.getTarget()))
 					setEdges.add(outEdge);
 		}
 		removeBends(g, setEdges, enableUndo);
-		
+
 	}
-	
+
 	public static void removeBends(final Graph graph, final Collection<Edge> edges, boolean enableUndo) {
 		if (graph == null || edges == null || edges.size() <= 0)
 			return;
-		
+
 		boolean hasBends = false;
 		for (Edge e : edges) {
 			Collection<Vector2d> positions = AttributeHelper.getEdgeBends(e);
@@ -382,7 +382,7 @@ public class GraphHelper implements HelperClass {
 		}
 		if (!hasBends)
 			return;
-		
+
 		if (!enableUndo) {
 			graph.getListenerManager().transactionStarted(graph);
 			try {
@@ -390,37 +390,37 @@ public class GraphHelper implements HelperClass {
 					AttributeHelper.removeEdgeBends(edge);
 			} finally {
 				graph.getListenerManager().transactionFinished(graph);
-//				GraphHelper.issueCompleteRedrawForGraph(graph);
+				// GraphHelper.issueCompleteRedrawForGraph(graph);
 			}
 			return;
 		}
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
 			private final String description = "Remove Edge Bends";
 			private final HashMap<Edge, Collection<Vector2d>> edge2oldBendPositions = new LinkedHashMap<Edge, Collection<Vector2d>>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				edge2oldBendPositions.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -433,10 +433,10 @@ public class GraphHelper implements HelperClass {
 					}
 				} finally {
 					graph.getListenerManager().transactionFinished(this);
-//					GraphHelper.issueCompleteRedrawForGraph(graph);
+					// GraphHelper.issueCompleteRedrawForGraph(graph);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -452,33 +452,33 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		if (graph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
 			undo.postEdit(updateCmd);
 			undo.endUpdate();
 		}
-		
+
 	}
-	
+
 	private final static String SHAPE = GraphicAttributeConstants.GRAPHICS + Attribute.SEPARATOR
 			+ GraphicAttributeConstants.SHAPE;
-	
+
 	/**
 	 * Add new bends to a graph
 	 * 
 	 * @param bends
-	 *           Number of bends to be introduced, either 1 or 2!
+	 *            Number of bends to be introduced, either 1 or 2!
 	 * @author klukas
 	 */
 	public static void introduceNewBends(Graph graph, HashSet<Edge> edges, int percent, String shape, int bends,
 			boolean massCenterFromSelection, String description, boolean enableUndo) {
 		edges = filterSelfEdges(edges);
 		removeBends(graph, edges, enableUndo);
-		
+
 		Vector2d ctr;
 		if (massCenterFromSelection) {
 			HashSet<Node> nodes = new LinkedHashSet<Node>();
@@ -501,9 +501,9 @@ public class GraphHelper implements HelperClass {
 				// (srcP.x+tgtP.x)/2d,
 				// (srcP.y+tgtP.y)/2d
 				// );
-				
+
 				EdgeShapeAttribute edgeShape = (EdgeShapeAttribute) (edge.getAttribute(SHAPE));
-				
+
 				if ((Math.abs(srcP.x - tgtP.x) < Math.abs(srcP.y - tgtP.y) * (percent / 100d))
 						|| (Math.abs(srcP.y - tgtP.y) < Math.abs(srcP.x - tgtP.x) * (percent / 100d))) {
 					// AttributeHelper.setLabel(edge, "S");
@@ -515,69 +515,68 @@ public class GraphHelper implements HelperClass {
 				if (bends == 1) {
 					Vector2d targetPoint = getEdgePoint(ctr, srcP, tgtP);
 					bendAttribute2newPoints.get(lhma).add(targetPoint);
-				} else
-					if (bends == 2) {
-						Vector2d targetPoint1 = getEdgePointAB(srcP, tgtP, true);
-						Vector2d targetPoint2 = getEdgePointAB(srcP, tgtP, false);
-						
-						bendAttribute2newPoints.get(lhma).add(targetPoint1);
-						bendAttribute2newPoints.get(lhma).add(targetPoint2);
-						
-					} else {
-						ErrorMsg
-								.addErrorMessage("Internal Error: Invalid Bend count parameter (only 1 or 2 bends are possible).");
-					}
+				} else if (bends == 2) {
+					Vector2d targetPoint1 = getEdgePointAB(srcP, tgtP, true);
+					Vector2d targetPoint2 = getEdgePointAB(srcP, tgtP, false);
+
+					bendAttribute2newPoints.get(lhma).add(targetPoint1);
+					bendAttribute2newPoints.get(lhma).add(targetPoint2);
+
+				} else {
+					ErrorMsg.addErrorMessage(
+							"Internal Error: Invalid Bend count parameter (only 1 or 2 bends are possible).");
+				}
 				edgeShape.setValue(shape);
-				
+
 			} catch (AttributeNotFoundException nfe) {
 				ErrorMsg.addErrorMessage(nfe);
 			}
 		}
 		applyUndoableBendAddOperation(graph, bendAttribute2newPoints, description, enableUndo);
 	}
-	
+
 	private static void applyUndoableBendAddOperation(final Graph graph,
-			final HashMap<LinkedHashMapAttribute, Collection<Vector2d>> bendAttribute2newPoints, final String description,
-			boolean enableUndo) {
+			final HashMap<LinkedHashMapAttribute, Collection<Vector2d>> bendAttribute2newPoints,
+			final String description, boolean enableUndo) {
 		/*
-		 * lhma.add(new CoordinateAttribute("bend", targetPoint.x,
-		 * targetPoint.y)); lhma.add(new CoordinateAttribute("bend1",
-		 * targetPoint1.x, targetPoint1.y)); lhma.add(new
-		 * CoordinateAttribute("bend2", targetPoint2.x, targetPoint2.y));
+		 * lhma.add(new CoordinateAttribute("bend", targetPoint.x, targetPoint.y));
+		 * lhma.add(new CoordinateAttribute("bend1", targetPoint1.x, targetPoint1.y));
+		 * lhma.add(new CoordinateAttribute("bend2", targetPoint2.x, targetPoint2.y));
 		 */
 		if (graph == null || bendAttribute2newPoints == null || bendAttribute2newPoints.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
 			private final HashMap<LinkedHashMapAttribute, Collection<CoordinateAttribute>> edge2newBendAttributes = new LinkedHashMap<LinkedHashMapAttribute, Collection<CoordinateAttribute>>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				edge2newBendAttributes.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				graph.getListenerManager().transactionStarted(this);
 				try {
-					for (Entry<LinkedHashMapAttribute, Collection<Vector2d>> entry : bendAttribute2newPoints.entrySet()) {
+					for (Entry<LinkedHashMapAttribute, Collection<Vector2d>> entry : bendAttribute2newPoints
+							.entrySet()) {
 						for (Vector2d newpoint : entry.getValue()) {
 							int size = entry.getKey().getCollectionNoClone().size() + 1;
 							CoordinateAttribute ca = new CoordinateAttribute("bend" + size, newpoint.x, newpoint.y);
@@ -592,7 +591,7 @@ public class GraphHelper implements HelperClass {
 					GraphHelper.issueCompleteRedrawForGraph(graph);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -609,9 +608,9 @@ public class GraphHelper implements HelperClass {
 				edge2newBendAttributes.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		if (enableUndo && graph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
@@ -619,7 +618,7 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	private static HashSet<Edge> filterSelfEdges(HashSet<Edge> edges) {
 		HashSet<Edge> result = new LinkedHashSet<Edge>();
 		for (Edge e : edges) {
@@ -628,12 +627,12 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	public static void introduceNewBends(Graph graph, HashSet<Edge> workEdges, int minPercent, String edgeShape, int i,
 			String description, boolean enableUndo) {
 		introduceNewBends(graph, workEdges, minPercent, edgeShape, i, false, description, enableUndo);
 	}
-	
+
 	private static Vector2d getEdgePoint(Vector2d ctr, Vector2d srcP, Vector2d tgtP) {
 		Vector2d posA = new Vector2d(srcP.x, tgtP.y);
 		Vector2d posB = new Vector2d(tgtP.x, srcP.y);
@@ -641,26 +640,26 @@ public class GraphHelper implements HelperClass {
 		double d2 = Math.sqrt((ctr.x - posB.x) * (ctr.x - posB.x) + (ctr.y - posB.y) * (ctr.y - posB.y));
 		return d1 > d2 ? posA : posB;
 	}
-	
+
 	public static void addBends(Edge edge, Collection<Vector2d> bendPoints) {
 		try {
 			String shape = "org.graffiti.plugins.views.defaults.SmoothLineEdgeShape";
 			LinkedHashMapAttribute lhma = (LinkedHashMapAttribute) edge.getAttribute(AttributeConstants.BENDS);
 			EdgeShapeAttribute edgeShape = (EdgeShapeAttribute) (edge.getAttribute(SHAPE));
-			
+
 			int cnt = 0;
 			for (Vector2d targetPoint : bendPoints) {
 				cnt++;
 				lhma.add(new CoordinateAttribute("bend" + cnt, targetPoint.x, targetPoint.y));
 			}
-			
+
 			edgeShape.setValue(shape);
-			
+
 		} catch (AttributeNotFoundException nfe) {
 			// todo
 		}
 	}
-	
+
 	private static Vector2d getEdgePointAB(Vector2d srcP, Vector2d tgtP, boolean returnA) {
 		Math.abs(tgtP.x - srcP.x);
 		Math.abs(tgtP.y - srcP.y);
@@ -675,13 +674,13 @@ public class GraphHelper implements HelperClass {
 		else
 			return pB;
 	}
-	
+
 	/**
-	 * Returns a list of the currently selected nodes. If no nodes are selected,
-	 * all nodes are returned.
+	 * Returns a list of the currently selected nodes. If no nodes are selected, all
+	 * nodes are returned.
 	 * 
-	 * @return Selected or all (if no selection) Nodes, if the given graph is
-	 *         null, a empty list is returned.
+	 * @return Selected or all (if no selection) Nodes, if the given graph is null,
+	 *         a empty list is returned.
 	 */
 	public static List<Node> getSelectedOrAllNodes(Selection selection, Graph graph) {
 		List<Node> nodes;
@@ -696,7 +695,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return nodes;
 	}
-	
+
 	public static Collection<GraphElement> getSelectedOrAllGraphElements(Selection selection, Graph graph) {
 		Collection<GraphElement> result;
 		if (graph == null)
@@ -712,7 +711,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	public static Selection removeNonValidElementsFromSelection(Selection s) {
 		if (s == null || s.isEmpty())
 			return s;
@@ -729,11 +728,11 @@ public class GraphHelper implements HelperClass {
 				s.remove(ge);
 		return s;
 	}
-	
+
 	public static Collection<Edge> getSelectedOrAllEdges() {
 		return getSelectedOrAllEdges(MainFrame.getInstance().getActiveEditorSession());
 	}
-	
+
 	public static Collection<Edge> getSelectedOrAllEdges(EditorSession workSession) {
 		Selection sel = null;
 		if (workSession.getSelectionModel() != null)
@@ -741,7 +740,7 @@ public class GraphHelper implements HelperClass {
 		Graph graph = workSession.getGraph();
 		return getSelectedOrAllEdges(sel, graph);
 	}
-	
+
 	public static Collection<Edge> getSelectedOrAllEdges(Selection selection, Graph graph) {
 		Collection<Edge> result;
 		if (graph == null)
@@ -755,7 +754,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	/**
 	 * @param activeView
 	 */
@@ -774,40 +773,41 @@ public class GraphHelper implements HelperClass {
 			});
 		}
 	}
-	
+
 	/**
 	 * Adds a new node to a graph.
 	 * 
 	 * @return the new node.
 	 * @param posx
-	 *           Position of the new Node (X)
+	 *            Position of the new Node (X)
 	 * @param posy
-	 *           Position of the new Node (Y)
+	 *            Position of the new Node (Y)
 	 * @param frameThickness_3
-	 *           Thinkness of Frame (default was 3)
+	 *            Thinkness of Frame (default was 3)
 	 * @param width_25
-	 *           Width of the new node (default was 25)
+	 *            Width of the new node (default was 25)
 	 * @param height_25
-	 *           Height of the new node (default was 25)
+	 *            Height of the new node (default was 25)
 	 * @param frameColor_0_0_0_255
-	 *           Color of the framw, the default was <code>new Color(0,0,0,255)</code>.
+	 *            Color of the framw, the default was
+	 *            <code>new Color(0,0,0,255)</code>.
 	 * @param fillColor_0_100_250_100
-	 *           Fill-Color. Default was <code>new Color(0,100,250,100)</code>.
+	 *            Fill-Color. Default was <code>new Color(0,100,250,100)</code>.
 	 */
 	public static Node addNodeToGraph(Graph graph, double posx, double posy, double frameThickness_3, double width_25,
 			double height_25, Color frameColor_0_0_0_255, Color fillColor_0_100_250_100) {
 		CollectionAttribute col = new HashMapAttribute("");
-		AttributeHelper.setNodeGraphicsAttribute(posx, posy, frameThickness_3, width_25, height_25, frameColor_0_0_0_255,
-				fillColor_0_100_250_100, col);
-		
+		AttributeHelper.setNodeGraphicsAttribute(posx, posy, frameThickness_3, width_25, height_25,
+				frameColor_0_0_0_255, fillColor_0_100_250_100, col);
+
 		Node node = graph.addNode(col);
 		return node;
 	}
-	
+
 	/**
 	 * @param graphInstance
-	 * @return A List of Integers, which describe the cluster numbers in the list
-	 *         of given nodes.
+	 * @return A List of Integers, which describe the cluster numbers in the list of
+	 *         given nodes.
 	 */
 	public static Collection<String> getClusters(List<?> nodes) {
 		Set<String> result = new TreeSet<String>();
@@ -818,11 +818,11 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	public static List<Node> getSelectedOrAllNodes() {
 		return getSelectedOrAllNodes(MainFrame.getInstance().getActiveEditorSession());
 	}
-	
+
 	public static List<Node> getSelectedOrAllNodes(EditorSession workSession) {
 		Selection sel = null;
 		if (workSession.getSelectionModel() != null)
@@ -830,7 +830,7 @@ public class GraphHelper implements HelperClass {
 		Graph graph = workSession.getGraph();
 		return getSelectedOrAllNodes(sel, graph);
 	}
-	
+
 	public static Collection<GraphElement> getSelectedOrAllGraphElements() {
 		try {
 			return getSelectedOrAllGraphElements(MainFrame.getInstance().getActiveEditorSession());
@@ -838,7 +838,7 @@ public class GraphHelper implements HelperClass {
 			return new ArrayList<GraphElement>();
 		}
 	}
-	
+
 	public static Collection<GraphElement> getSelectedOrAllGraphElements(EditorSession workSession) {
 		Selection sel = null;
 		if (workSession.getSelectionModel() != null)
@@ -846,13 +846,13 @@ public class GraphHelper implements HelperClass {
 		Graph graph = workSession.getGraph();
 		return getSelectedOrAllGraphElements(sel, graph);
 	}
-	
+
 	public static List<Node> getSelectedNodes(EditorSession workSession) {
 		Selection selection = null;
 		if (workSession.getSelectionModel() != null)
 			selection = workSession.getSelectionModel().getActiveSelection();
 		Graph graph = workSession.getGraph();
-		
+
 		List<Node> nodes;
 		if (graph == null)
 			return new ArrayList<Node>();
@@ -865,7 +865,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return nodes;
 	}
-	
+
 	public static List<NodeHelper> getSelectedOrAllHelperNodes(EditorSession workSession) {
 		Selection sel = null;
 		if (workSession.getSelectionModel() != null)
@@ -879,7 +879,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	public static List<NodeHelper> getHelperNodes(Graph graph) {
 		ArrayList<NodeHelper> result = new ArrayList<NodeHelper>();
 		for (Iterator<Node> it = graph.getNodesIterator(); it.hasNext();) {
@@ -888,7 +888,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return result;
 	}
-	
+
 	/**
 	 * this same method code is duplicated somewhere... in case of changes, the
 	 * method name should be searched for
@@ -904,7 +904,7 @@ public class GraphHelper implements HelperClass {
 			}
 		}
 	}
-	
+
 	public synchronized static void issueCompleteRedrawForGraph(Graph g) {
 		Set<?> s = MainFrame.getSessions();
 		for (Iterator<?> it = s.iterator(); it.hasNext();) {
@@ -917,16 +917,16 @@ public class GraphHelper implements HelperClass {
 				}
 		}
 	}
-	
+
 	public static void issueCompleteRedrawForActiveView() {
 		if (GravistoService.getInstance().getMainFrame().getActiveEditorSession() == null)
 			return;
-		
+
 		View activeView = GravistoService.getInstance().getMainFrame().getActiveEditorSession().getActiveView();
 		Graph activeGraph = GravistoService.getInstance().getMainFrame().getActiveEditorSession().getGraph();
 		issueCompleteRedrawForView(activeView, activeGraph);
 	}
-	
+
 	public static void setClusterGraphNodeSizeAndPositionFromReferenceGraph(Graph mainGraph,
 			Graph clusterBackgroundGraph, BackgroundTaskStatusProviderSupportingExternalCall statusProvider) {
 		if (clusterBackgroundGraph == null)
@@ -935,7 +935,7 @@ public class GraphHelper implements HelperClass {
 		int cnt = 0;
 		int work = clusters.size();
 		statusProvider.setCurrentStatusValueFine(0d);
-		
+
 		HashMap<String, String> clusterId2PathwayName = new LinkedHashMap<String, String>();
 		if (ReleaseInfo.getRunningReleaseStatus() == Release.KGML_EDITOR) {
 			for (Node n : mainGraph.getNodes()) {
@@ -952,7 +952,7 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 		}
-		
+
 		for (String clusterID : clusters) {
 			if (statusProvider.wantsToStop())
 				break;
@@ -969,7 +969,7 @@ public class GraphHelper implements HelperClass {
 					nh.setLabelFontSize(40, false);
 					nh.setAttributeValue("clusterinfo", "subgraphNodeCount", subGraph.getNodes().size());
 					nh.setAttributeValue("clusterinfo", "subgraphEdgeCount", subGraph.getEdges().size());
-					
+
 					if (ReleaseInfo.getRunningReleaseStatus() == Release.KGML_EDITOR) {
 						KeggGmlHelper.setKeggId(nh, clusterID);
 						KeggGmlHelper.setKeggType(nh, "map");
@@ -977,7 +977,7 @@ public class GraphHelper implements HelperClass {
 						if (clusterId2PathwayName.containsKey(clusterID))
 							nh.setLabel(clusterId2PathwayName.get(clusterID));
 					}
-					
+
 					Vector2d center = new Vector2d((bottomRight.x + topLeft.x) / 2d, (bottomRight.y + topLeft.y) / 2d);
 					nh.setPosition(center.x, center.y);
 					nh.setSize(bottomRight.x - topLeft.x, bottomRight.y - topLeft.y);
@@ -988,7 +988,7 @@ public class GraphHelper implements HelperClass {
 		statusProvider.setCurrentStatusText2(work + " Sub-Graphs processed");
 		statusProvider.setCurrentStatusValueFine(100d);
 	}
-	
+
 	public static void printNodeLayout(Graph graph) {
 		System.out.println("Graph: " + graph.getName());
 		System.out.println("Nodes/Edges: " + graph.getNodes().size() + "/" + graph.getEdges().size());
@@ -996,10 +996,11 @@ public class GraphHelper implements HelperClass {
 			Vector2d position = AttributeHelper.getPositionVec2d(n);
 			Vector2d size = AttributeHelper.getSize(n);
 			System.out.println("Node " + n.getID() + " [" + AttributeHelper.getLabel(n, "no label") + "]: " + "P["
-					+ (int) position.x + ":" + (int) position.y + "] " + "S[" + (int) size.x + ":" + (int) size.y + "]");
+					+ (int) position.x + ":" + (int) position.y + "] " + "S[" + (int) size.x + ":" + (int) size.y
+					+ "]");
 		}
 	}
-	
+
 	public static void exchangePositions(List<Node> nodes, final NodeSortCommand sortCommand,
 			final boolean sortConsiderCluster) {
 		if (sortCommand == NodeSortCommand.dontSort)
@@ -1017,13 +1018,13 @@ public class GraphHelper implements HelperClass {
 				if (sortCommand == NodeSortCommand.sortLabelInverse)
 					return -o1.getLabel().compareToIgnoreCase(o2.getLabel());
 				if (sortCommand == NodeSortCommand.sortRatio) {
-					int r = new Double(o1.getAverage()).compareTo(o2.getAverage());
+					int r = Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 					if (r == 0)
 						r = o1.getLabel().compareToIgnoreCase(o2.getLabel());
 					return r;
 				}
 				if (sortCommand == NodeSortCommand.sortRatioInverse) {
-					int r = -new Double(o1.getAverage()).compareTo(o2.getAverage());
+					int r = -Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 					if (r == 0)
 						r = o2.getLabel().compareToIgnoreCase(o1.getLabel());
 					return r;
@@ -1042,7 +1043,7 @@ public class GraphHelper implements HelperClass {
 			nh.setPosition(sourceListOfPositions.get(idx++));
 		}
 	}
-	
+
 	public static void exchangePositionsNHL(List<NodeHelper> nodes, final NodeSortCommand sortCommand,
 			final boolean sortConsiderCluster) {
 		if (sortCommand == NodeSortCommand.dontSort)
@@ -1052,7 +1053,7 @@ public class GraphHelper implements HelperClass {
 			todo.add(nh.getGraphNode());
 		exchangePositions(todo, sortCommand, sortConsiderCluster);
 	}
-	
+
 	public static Collection<NodeHelper> getSortedNodeHelpers(Collection<Node> nodes, final NodeSortCommand sortCommand,
 			final boolean sortConsiderCluster) {
 		if (sortCommand == NodeSortCommand.dontSort) {
@@ -1080,9 +1081,9 @@ public class GraphHelper implements HelperClass {
 				if (sortCommand == NodeSortCommand.sortLabelInverse)
 					return -o1.getLabel().compareToIgnoreCase(o2.getLabel());
 				if (sortCommand == NodeSortCommand.sortRatio)
-					return new Double(o1.getAverage()).compareTo(o2.getAverage());
+					return Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 				if (sortCommand == NodeSortCommand.sortRatioInverse)
-					return -new Double(o1.getAverage()).compareTo(o2.getAverage());
+					return -Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 				return 0;
 			}
 		});
@@ -1096,7 +1097,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return sortedNodes;
 	}
-	
+
 	public static Collection<NodeHelper> getSortedNodeHelpersNHL(Collection<NodeHelper> nodes,
 			final NodeSortCommand sortCommand, final boolean sortConsiderCluster) {
 		if (sortCommand == NodeSortCommand.dontSort) {
@@ -1120,9 +1121,9 @@ public class GraphHelper implements HelperClass {
 				if (sortCommand == NodeSortCommand.sortLabelInverse)
 					return -o1.getLabel().compareToIgnoreCase(o2.getLabel());
 				if (sortCommand == NodeSortCommand.sortRatio)
-					return new Double(o1.getAverage()).compareTo(o2.getAverage());
+					return Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 				if (sortCommand == NodeSortCommand.sortRatioInverse)
-					return -new Double(o1.getAverage()).compareTo(o2.getAverage());
+					return -Double.valueOf(o1.getAverage()).compareTo(o2.getAverage());
 				return 0;
 			}
 		});
@@ -1131,7 +1132,7 @@ public class GraphHelper implements HelperClass {
 		}
 		return sortedNodes;
 	}
-	
+
 	public static void selectGraphElements(Collection<? extends GraphElement> elements) {
 		try {
 			EditorSession es = findSession(elements);
@@ -1141,7 +1142,7 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	public static void selectGraphElements(boolean clearBefore, Collection<? extends GraphElement> elements) {
 		try {
 			EditorSession es = findSession(elements);
@@ -1153,7 +1154,7 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	private static EditorSession findSession(Collection<? extends Attributable> elements) {
 		if (elements == null || elements.size() == 0)
 			return null;
@@ -1174,7 +1175,7 @@ public class GraphHelper implements HelperClass {
 			return null;
 		}
 	}
-	
+
 	private static EditorSession findSession(GraphElement element) {
 		if (element == null || element.getGraph() == null)
 			return null;
@@ -1189,7 +1190,7 @@ public class GraphHelper implements HelperClass {
 			return null;
 		}
 	}
-	
+
 	public static void unselectGraphElements(Collection<? extends GraphElement> elements) {
 		try {
 			EditorSession es = findSession(elements);
@@ -1199,8 +1200,8 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
-	public static void selectElements(Collection<Attributable> elements) {
+
+	public static void selectElements(Collection<? extends Attributable> elements) {
 		try {
 			EditorSession es = findSession(elements);
 			es.getSelectionModel().getActiveSelection().addAll(elements);
@@ -1209,7 +1210,7 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	public static void selectGraphElement(Node n) {
 		try {
 			EditorSession es = findSession(n);
@@ -1219,7 +1220,7 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	public static void selectGraphElement(Edge e) {
 		try {
 			EditorSession es = findSession(e);
@@ -1229,7 +1230,7 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	public static void clearSelection() {
 		try {
 			MainFrame.getInstance().getActiveEditorSession().getSelectionModel().getActiveSelection().clear();
@@ -1238,15 +1239,15 @@ public class GraphHelper implements HelperClass {
 			// empty
 		}
 	}
-	
+
 	public static void selectNodes(Collection<Node> nodes) {
 		selectGraphElements(nodes);
 	}
-	
+
 	public static void selectNodes(boolean clearBefore, Collection<Node> nodes) {
 		selectGraphElements(clearBefore, nodes);
 	}
-	
+
 	public static Collection<GraphElement> getSelectedOrAllGraphElements(Graph graph) {
 		for (Session s : MainFrame.getSessions()) {
 			if ((s instanceof EditorSession) && s.getGraph() == graph) {
@@ -1255,38 +1256,38 @@ public class GraphHelper implements HelperClass {
 		}
 		return null;
 	}
-	
+
 	public static void applyUndoableNodePositionUpdate(final HashMap<Node, Vector2d> nodes2newPositions,
 			final String description) {
 		if (nodes2newPositions == null || nodes2newPositions.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			HashMap<Node, Vector2d> oldPositions = new LinkedHashMap<Node, Vector2d>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				oldPositions.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				Graph myGraph = nodes2newPositions.keySet().iterator().next().getGraph();
@@ -1304,7 +1305,7 @@ public class GraphHelper implements HelperClass {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				Graph myGraph = null;
@@ -1320,12 +1321,12 @@ public class GraphHelper implements HelperClass {
 						 * 
 						 */
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "Graph elements have been deleted";
 						}
-						
+
 					};
 					throw ce;
 				}
@@ -1344,9 +1345,9 @@ public class GraphHelper implements HelperClass {
 				oldPositions.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		Graph myGraph = nodes2newPositions.keySet().iterator().next().getGraph();
 		if (MainFrame.getInstance() != null && MainFrame.getInstance().getActiveSession() != null)
 			if (myGraph == MainFrame.getInstance().getActiveSession().getGraph()) {
@@ -1356,38 +1357,38 @@ public class GraphHelper implements HelperClass {
 				undo.endUpdate();
 			}
 	}
-	
+
 	public static void applyUndoableNodeSizeUpdate(final HashMap<Node, Vector2d> nodes2newNodeSize,
 			final String description) {
 		if (nodes2newNodeSize == null || nodes2newNodeSize.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			HashMap<Node, Vector2d> oldSize = new LinkedHashMap<Node, Vector2d>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				oldSize.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				Graph myGraph = nodes2newNodeSize.keySet().iterator().next().getGraph();
@@ -1405,7 +1406,7 @@ public class GraphHelper implements HelperClass {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				Graph myGraph = null;
@@ -1421,12 +1422,12 @@ public class GraphHelper implements HelperClass {
 						 * 
 						 */
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "Graph elements have been deleted";
 						}
-						
+
 					};
 					throw ce;
 				}
@@ -1445,9 +1446,9 @@ public class GraphHelper implements HelperClass {
 				oldSize.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		Graph myGraph = nodes2newNodeSize.keySet().iterator().next().getGraph();
 		if (myGraph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
@@ -1455,43 +1456,43 @@ public class GraphHelper implements HelperClass {
 			undo.postEdit(updateCmd);
 			undo.endUpdate();
 		}
-		
+
 	}
-	
+
 	public static void applyUndoableNodeAndBendPositionUpdate(final HashMap<Node, Vector2d> nodes2newPositions,
 			final HashMap<CoordinateAttribute, Vector2d> bends2newPositions, final String description) {
 		if (nodes2newPositions == null || bends2newPositions == null
 				|| (nodes2newPositions.size() == 0 && bends2newPositions.size() == 0))
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			HashMap<Node, Vector2d> oldPositions = new LinkedHashMap<Node, Vector2d>();
 			HashMap<CoordinateAttribute, Vector2d> oldPositionsOfBends = new LinkedHashMap<CoordinateAttribute, Vector2d>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				oldPositions.clear();
 				oldPositionsOfBends.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				Graph myGraph = nodes2newPositions.keySet().iterator().next().getGraph();
@@ -1511,18 +1512,18 @@ public class GraphHelper implements HelperClass {
 							continue;
 						if (entry.getValue() != null) {
 							if (!oldPositionsOfBends.containsKey(entry.getKey()))
-								oldPositionsOfBends.put(entry.getKey(), new Vector2d(entry.getKey().getX(), entry.getKey()
-										.getY()));
+								oldPositionsOfBends.put(entry.getKey(),
+										new Vector2d(entry.getKey().getX(), entry.getKey().getY()));
 							entry.getKey().setX(entry.getValue().x);
 							entry.getKey().setY(entry.getValue().y);
 						}
 					}
-					
+
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				Graph myGraph = null;
@@ -1546,12 +1547,12 @@ public class GraphHelper implements HelperClass {
 						 * 
 						 */
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "Graph elements have been deleted";
 						}
-						
+
 					};
 					throw ce;
 				}
@@ -1580,9 +1581,9 @@ public class GraphHelper implements HelperClass {
 				oldPositionsOfBends.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		Graph myGraph = null;
 		for (Node n : nodes2newPositions.keySet()) {
 			if (n.getGraph() != null) {
@@ -1606,41 +1607,41 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	public static void applyUndoableNodePositionAndSizeUpdate(final HashMap<Node, Vector2d> nodes2newPositions,
 			final HashMap<Node, Vector2d> nodes2newNodeSize, final String description) {
 		if (nodes2newPositions == null || nodes2newNodeSize == null
 				|| (nodes2newNodeSize.size() == 0 && nodes2newPositions.size() == 0))
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			HashMap<Node, Vector2d> oldPositions = new LinkedHashMap<Node, Vector2d>();
 			HashMap<Node, Vector2d> oldNodeSize = new LinkedHashMap<Node, Vector2d>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				oldPositions.clear();
 				oldNodeSize.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				Graph myGraph = nodes2newPositions.keySet().iterator().next().getGraph();
@@ -1662,12 +1663,12 @@ public class GraphHelper implements HelperClass {
 							oldNodeSize.put(n, oldSize);
 						AttributeHelper.setSize(n, newSize);
 					}
-					
+
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				Graph myGraph = null;
@@ -1690,12 +1691,12 @@ public class GraphHelper implements HelperClass {
 						 * 
 						 */
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "Graph elements have been deleted";
 						}
-						
+
 					};
 					throw ce;
 				}
@@ -1722,9 +1723,9 @@ public class GraphHelper implements HelperClass {
 				oldNodeSize.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		Graph myGraph = null;
 		for (Node n : nodes2newPositions.keySet()) {
 			if (n.getGraph() != null) {
@@ -1746,39 +1747,39 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	public static void postUndoableChanges(final Graph myGraph,
 			final HashMap<CoordinateAttribute, Vector2d> coordinates2oldPositions,
 			final HashMap<CoordinateAttribute, Vector2d> coordinates2newPositions, final String description) {
 		if (myGraph == null || coordinates2oldPositions == null || coordinates2newPositions == null
 				|| coordinates2newPositions.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				coordinates2newPositions.clear();
 				coordinates2oldPositions.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				myGraph.getListenerManager().transactionStarted(this);
@@ -1789,12 +1790,12 @@ public class GraphHelper implements HelperClass {
 							entry.getKey().setY(entry.getValue().y);
 						}
 					}
-					
+
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				myGraph.getListenerManager().transactionStarted(this);
@@ -1810,7 +1811,7 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 		};
-		
+
 		if (MainFrame.getInstance().getActiveSession() != null
 				&& myGraph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
@@ -1821,39 +1822,39 @@ public class GraphHelper implements HelperClass {
 			updateCmd.redo();
 		}
 	}
-	
+
 	public static void postUndoableChanges3d(final Graph myGraph,
 			final HashMap<CoordinateAttribute, Vector3d> coordinates2oldPositions,
 			final HashMap<CoordinateAttribute, Vector3d> coordinates2newPositions, final String description) {
 		if (myGraph == null || coordinates2oldPositions == null || coordinates2newPositions == null
 				|| coordinates2newPositions.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				coordinates2newPositions.clear();
 				coordinates2oldPositions.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				myGraph.getListenerManager().transactionStarted(this);
@@ -1865,12 +1866,12 @@ public class GraphHelper implements HelperClass {
 							AttributeHelper.setPositionZ((Node) entry.getKey().getAttributable(), entry.getValue().z);
 						}
 					}
-					
+
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				myGraph.getListenerManager().transactionStarted(this);
@@ -1887,7 +1888,7 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 		};
-		
+
 		if (myGraph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
@@ -1895,52 +1896,54 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
-	public static void enumerateNodePositions(Graph graphInstance, HashMap<CoordinateAttribute, Vector2d> oldPositions) {
+
+	public static void enumerateNodePositions(Graph graphInstance,
+			HashMap<CoordinateAttribute, Vector2d> oldPositions) {
 		for (Node n : graphInstance.getNodes()) {
 			CoordinateAttribute coA = (CoordinateAttribute) n.getAttribute(GraphicAttributeConstants.COORD_PATH);
 			oldPositions.put(coA, new Vector2d(coA.getCoordinate()));
 		}
 	}
-	
-	public static void enumerateNodePositions3d(Graph graphInstance, HashMap<CoordinateAttribute, Vector3d> oldPositions) {
+
+	public static void enumerateNodePositions3d(Graph graphInstance,
+			HashMap<CoordinateAttribute, Vector3d> oldPositions) {
 		for (Node n : graphInstance.getNodes()) {
 			CoordinateAttribute coA = (CoordinateAttribute) n.getAttribute(GraphicAttributeConstants.COORD_PATH);
 			oldPositions.put(coA, AttributeHelper.getPositionVec3d(n, true));
 		}
 	}
-	
+
 	public static void applyUndoableClusterIdAssignment(final Graph graph,
 			final HashMap<GraphElement, String> ge2newClusterID, final String description, boolean enableUndo) {
 		if (graph == null || ge2newClusterID == null || ge2newClusterID.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			HashMap<GraphElement, String> oldIds = new LinkedHashMap<GraphElement, String>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				oldIds.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -1957,7 +1960,7 @@ public class GraphHelper implements HelperClass {
 					graph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -1974,9 +1977,9 @@ public class GraphHelper implements HelperClass {
 				oldIds.clear();
 			}
 		};
-		
+
 		updateCmd.redo();
-		
+
 		if (enableUndo && graph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
@@ -1984,36 +1987,36 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	public static void postUndoableNodeAndEdgeAdditions(final Graph graph, final HashSet<Node> newNodes,
 			final HashSet<Edge> newEdges, final String description) {
 		if (graph == null || newNodes == null || newEdges == null || (newNodes.size() + newEdges.size() <= 0))
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
 			HashMap<Node, Node> oldNode2newlyAddedNode = new LinkedHashMap<Node, Node>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -2045,7 +2048,7 @@ public class GraphHelper implements HelperClass {
 					graph.getListenerManager().transactionFinished(this);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				graph.getListenerManager().transactionStarted(this);
@@ -2063,7 +2066,7 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 		};
-		
+
 		if (graph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
@@ -2071,7 +2074,7 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	public static Set<Node> getLeafNodes(Graph graph) {
 		LinkedHashSet<Node> result = new LinkedHashSet<Node>();
 		for (Node n : graph.getNodes())
@@ -2079,7 +2082,7 @@ public class GraphHelper implements HelperClass {
 				result.add(n);
 		return result;
 	}
-	
+
 	public static Set<Node> getLeafNodes(Collection<Node> sourceNodes) {
 		LinkedHashSet<Node> result = new LinkedHashSet<Node>();
 		LinkedHashSet<Node> reachableNodes = new LinkedHashSet<Node>();
@@ -2090,7 +2093,7 @@ public class GraphHelper implements HelperClass {
 				result.add(n);
 		return result;
 	}
-	
+
 	public static Collection<GraphElement> getVisibleElements(Collection<GraphElement> elements) {
 		ArrayList<GraphElement> result = new ArrayList<GraphElement>();
 		for (GraphElement ge : elements)
@@ -2098,7 +2101,7 @@ public class GraphHelper implements HelperClass {
 				result.add(ge);
 		return result;
 	}
-	
+
 	public static Collection<Node> getVisibleNodes(Collection<Node> elements) {
 		ArrayList<Node> result = new ArrayList<Node>();
 		for (Node ge : elements)
@@ -2106,26 +2109,27 @@ public class GraphHelper implements HelperClass {
 				result.add(ge);
 		return result;
 	}
-	
+
 	public static void moveGraph(Graph graph, double offX, double offY) {
 		CenterLayouterAlgorithm.moveGraph(graph, "graph movement (" + (int) offX + "/" + (int) offY + ")", false, offX,
 				offY);
 	}
-	
+
 	/**
 	 * Moves given nodes by the given delta coordinates
+	 * 
 	 * @param nodes
 	 * @param deltaX
 	 * @param deltaY
 	 */
 	public static void moveNodes(Collection<Node> nodes, double deltaX, double deltaY) {
-		for(Node n : nodes) {
+		for (Node n : nodes) {
 			Point2D position = AttributeHelper.getPosition(n);
 			position.setLocation(position.getX() + deltaX, position.getY() + deltaY);
 			AttributeHelper.setPosition(n, position);
 		}
 	}
-	
+
 	public static void getShortestDistances(HashMap<Node, Integer> result, HashSet<Node> from, boolean directed,
 			int currentDistance) {
 		HashSet<Node> todo = new HashSet<Node>();
@@ -2136,7 +2140,7 @@ public class GraphHelper implements HelperClass {
 				edges = n.getAllOutEdges();
 			else
 				edges = n.getEdges();
-			
+
 			for (Edge e : edges) {
 				if (e.getSource() == e.getTarget())
 					continue;
@@ -2152,39 +2156,39 @@ public class GraphHelper implements HelperClass {
 		if (todo.size() > 0)
 			getShortestDistances(result, todo, directed, currentDistance + 1);
 	}
-	
+
 	public static void applyUndoableEdgeReversal(final Graph graph, final Collection<Edge> edges,
 			final String description) {
-		
+
 		if (graph == null || edges == null || edges.size() <= 0)
 			return;
-		
+
 		AbstractUndoableEdit updateCmd = new AbstractUndoableEdit() {
 			private static final long serialVersionUID = 1L;
-			
+
 			ArrayList<Edge> newEdges = new ArrayList<Edge>();
-			
+
 			@Override
 			public String getPresentationName() {
 				return description;
 			}
-			
+
 			@Override
 			public String getRedoPresentationName() {
 				return "Redo " + description;
 			}
-			
+
 			@Override
 			public String getUndoPresentationName() {
 				return "Undo " + description;
 			}
-			
+
 			@Override
 			public void die() {
 				super.die();
 				newEdges.clear();
 			}
-			
+
 			@Override
 			public void redo() throws CannotRedoException {
 				Graph myGraph = null;
@@ -2197,15 +2201,15 @@ public class GraphHelper implements HelperClass {
 				if (myGraph == null)
 					throw new CannotRedoException() {
 						/**
-					 * 
-					 */
+						* 
+						*/
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "In the mean time all graph elements from the working set have been deleted!";
 						}
-						
+
 					};
 				myGraph.getListenerManager().transactionStarted(this);
 				int missing = 0;
@@ -2230,14 +2234,15 @@ public class GraphHelper implements HelperClass {
 					myGraph.deleteAll(edges);
 					GraphHelper.selectGraphElements(newEdges);
 					if (missing > 0)
-						MainFrame.showMessageDialog("<html>In the meantime " + missing
-								+ " edges have been removed from the graph.", "Processing incomplete");
+						MainFrame.showMessageDialog(
+								"<html>In the meantime " + missing + " edges have been removed from the graph.",
+								"Processing incomplete");
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this, true);
 					GraphHelper.issueCompleteRedrawForGraph(myGraph);
 				}
 			}
-			
+
 			@Override
 			public void undo() throws CannotUndoException {
 				Graph myGraph = null;
@@ -2253,12 +2258,12 @@ public class GraphHelper implements HelperClass {
 						 * 
 						 */
 						private static final long serialVersionUID = 1L;
-						
+
 						@Override
 						public String getMessage() {
 							return "In the mean time all graph elements from the working set have been deleted!";
 						}
-						
+
 					};
 					throw ce;
 				}
@@ -2287,15 +2292,16 @@ public class GraphHelper implements HelperClass {
 					newEdges.clear();
 					GraphHelper.selectGraphElements(edges);
 					if (missing > 0)
-						MainFrame.showMessageDialog("<html>In the meantime " + missing
-								+ " edges have been removed from the graph.", "Processing incomplete");
+						MainFrame.showMessageDialog(
+								"<html>In the meantime " + missing + " edges have been removed from the graph.",
+								"Processing incomplete");
 				} finally {
 					myGraph.getListenerManager().transactionFinished(this, true);
 					GraphHelper.issueCompleteRedrawForGraph(myGraph);
 				}
 			}
 		};
-		
+
 		Graph myGraph = null;
 		for (Edge e : edges) {
 			if (e.getGraph() != null) {
@@ -2303,9 +2309,9 @@ public class GraphHelper implements HelperClass {
 				break;
 			}
 		}
-		
+
 		updateCmd.redo();
-		
+
 		if (myGraph == MainFrame.getInstance().getActiveSession().getGraph()) {
 			UndoableEditSupport undo = MainFrame.getInstance().getUndoSupport();
 			undo.beginUpdate();
@@ -2313,7 +2319,7 @@ public class GraphHelper implements HelperClass {
 			undo.endUpdate();
 		}
 	}
-	
+
 	public static int countOverlapps(Graph g, Vector2d pos, Vector2d size) {
 		int res = 0;
 		size = new Vector2d(size);
@@ -2327,10 +2333,10 @@ public class GraphHelper implements HelperClass {
 		}
 		return res;
 	}
-	
+
 	/**
 	 * @param n
-	 *           Node
+	 *            Node
 	 * @return Null, if clustering coefficient is undefined (division by zero)
 	 */
 	public static Double getClusteringCoefficientUndirected(Node n) {
@@ -2351,13 +2357,13 @@ public class GraphHelper implements HelperClass {
 			}
 			edgesConnectingNeighbors = edgesConnectingNeighbors / 2;
 			double result = 2d * edgesConnectingNeighbors / neighbors / (neighbors - 1);
-			return new Double(result);
+			return Double.valueOf(result);
 		}
 	}
-	
+
 	/**
 	 * @param n
-	 *           Node
+	 *            Node
 	 * @return Null, if clustering coefficient is undefined (division by zero)
 	 */
 	public static Double getClusteringCoefficientDirected(Node n) {
@@ -2377,14 +2383,13 @@ public class GraphHelper implements HelperClass {
 				}
 			}
 			double result = (double) edgesConnectingNeighbors / (double) neighbors / (neighbors - 1);
-			return new Double(result);
+			return Double.valueOf(result);
 		}
 	}
-	
+
 	/**
-	 * Creates the adjacency matrix for a given graph.
-	 * It will also consider if the graph is directed.
-	 * The order of the nodes in the array are the same as in the
+	 * Creates the adjacency matrix for a given graph. It will also consider if the
+	 * graph is directed. The order of the nodes in the array are the same as in the
 	 * Node list of the given Graph.
 	 * 
 	 * @param g
@@ -2392,17 +2397,17 @@ public class GraphHelper implements HelperClass {
 	 */
 	public static byte[][] createAdjacencyMatrix(Graph g, boolean directed) {
 		int numNodes = g.getNodes().size();
-		
+
 		Map<Node, Integer> mapNodesToIdx = new HashMap<>();
 		int i = 0;
 		for (Node curNode : g.getNodes())
 			mapNodesToIdx.put(curNode, i++);
-		
+
 		byte adjMatrix[][] = new byte[numNodes][];
-		
+
 		for (i = 0; i < numNodes; i++)
 			adjMatrix[i] = new byte[numNodes];
-		
+
 		for (Node nodeY : g.getNodes())
 			if (directed) {
 				for (Node nodeX : nodeY.getOutNeighbors()) {
@@ -2413,8 +2418,8 @@ public class GraphHelper implements HelperClass {
 					adjMatrix[mapNodesToIdx.get(nodeY)][mapNodesToIdx.get(nodeX)] = 1;
 				}
 			}
-		
+
 		return adjMatrix;
 	}
-	
+
 }
