@@ -24,7 +24,7 @@ import de.ipk_gatersleben.ag_nw.graffiti.plugins.gui.ipk_graffitiview.chartDrawC
  */
 public class IAPnodeTools extends NodeTools {
 	public static SOMdataEntry getSOMdataSet(GraphElement n, int columnCount, String[] columnDesc, boolean returnNaN,
-						boolean useSampleAverageValues) {
+			boolean useSampleAverageValues) {
 		List<MyComparableDataPoint> mappedData = new ArrayList<MyComparableDataPoint>();
 		StringBuffer res = new StringBuffer();
 		int missingDataPoints = 0;
@@ -38,9 +38,9 @@ public class IAPnodeTools extends NodeTools {
 					list = getSortedDataSetValues(mappingData);
 				mappedData.addAll(list);
 			}
-			
+
 			ArrayList<Double> dataPoints = new ArrayList<Double>();
-			
+
 			for (int column = 0; column < columnDesc.length; column++) {
 				String findDataPointWithColumnDesc = columnDesc[column];
 				MyComparableDataPoint mcdpResult = null;
@@ -53,23 +53,23 @@ public class IAPnodeTools extends NodeTools {
 				}
 				if (mcdpResult == null) {
 					if (returnNaN)
-						dataPoints.add(new Double(Double.NaN)); // missing value
+						dataPoints.add(Double.valueOf(Double.NaN)); // missing value
 					else {
 						if (Double.isNaN(lastDataPoint))
 							missingDataPoints++;
 						else
-							dataPoints.add(new Double(lastDataPoint));
+							dataPoints.add(Double.valueOf(lastDataPoint));
 					}
 				} else {
 					while (missingDataPoints > 0) {
-						dataPoints.add(new Double(mcdpResult.mean));
+						dataPoints.add(Double.valueOf(mcdpResult.mean));
 						missingDataPoints--;
 					}
-					dataPoints.add(new Double(mcdpResult.mean));
+					dataPoints.add(Double.valueOf(mcdpResult.mean));
 					lastDataPoint = mcdpResult.mean;
 				}
 			}
-			
+
 			// search min max during
 			double min = Double.MAX_VALUE;
 			double max = Double.NEGATIVE_INFINITY;
