@@ -35,78 +35,60 @@ import de.ipk_gatersleben.ag_nw.graffiti.plugins.editcomponents.chart_settings.G
 import de.ipk_gatersleben.ag_nw.graffiti.plugins.gui.editing_tools.script_helper.NodeHelper;
 
 /**
- * @author Christian Klukas
- *         (c) 2006 IPK Gatersleben, Group Network Analysis
+ * @author Christian Klukas (c) 2006 IPK Gatersleben, Group Network Analysis
  */
-public class CreateGOchildrenClustersHistogramAlgorithm
-		extends AbstractAlgorithm
+public class CreateGOchildrenClustersHistogramAlgorithm extends AbstractAlgorithm
 		implements AlgorithmWithComponentDescription {
-	
+
 	private boolean setLabel = true;
 	private boolean removeExistingDatamapping = true;
 	private boolean processUpstreamOfSelection = true;
-	
-	/*
-	 * (non-Javadoc)
-	 * @see org.graffiti.plugin.algorithm.Algorithm#getName()
-	 */
+
 	public String getName() {
 		return "Add Cluster-Histogram";
 	}
-	
+
 	@Override
 	public String getCategory() {
 		return "Hierarchy";
 	}
-	
+
 	@Override
 	public Set<Category> getSetCategory() {
-		return new HashSet<Category>(Arrays.asList(
-				Category.GRAPH,
-				Category.COMPUTATION,
-				Category.STATISTICS,
-				Category.CHART,
-				Category.VISUAL,
-				Category.CLUSTER
-				));
+		return new HashSet<Category>(Arrays.asList(Category.GRAPH, Category.COMPUTATION, Category.STATISTICS,
+				Category.CHART, Category.VISUAL, Category.CLUSTER));
 	}
-	
+
 	@Override
 	public String getDescription() {
-		return "<html>" +
-				"This command enumerates all<br>" +
-				"leaf nodes with mapping data, connected<br>" +
-				"to a given Hierarchy-Node.<br>" +
-				"A histogram of the number of <br>" +
-				"occurrences of a specific cluster <br>" +
-				"ID is created. A data mapping<br>" +
-				"representing this data is created <br>" +
-				"and shown as a bar-chart.<br><br>" +
-				"A similar command which processes<br>" +
-				"the cluster distribution of neighbour-<br>" +
-				"nodes of nodes with mapping-data is<br>" +
-				"available from the &quot;Analysis&quot; menu.";
+		return "<html>" + "This command enumerates all<br>" + "leaf nodes with mapping data, connected<br>"
+				+ "to a given Hierarchy-Node.<br>" + "A histogram of the number of <br>"
+				+ "occurrences of a specific cluster <br>" + "ID is created. A data mapping<br>"
+				+ "representing this data is created <br>" + "and shown as a bar-chart.<br><br>"
+				+ "A similar command which processes<br>" + "the cluster distribution of neighbour-<br>"
+				+ "nodes of nodes with mapping-data is<br>" + "available from the &quot;Analysis&quot; menu.";
 	}
-	
+
 	public JComponent getDescriptionComponent() {
 		ClassLoader cl = this.getClass().getClassLoader();
 		String path = this.getClass().getPackage().getName().replace('.', '/');
 		ImageIcon icon = new ImageIcon(cl.getResource(path + "/images/cluster_hist_cmd_desc_scaled.png"));
 		return FolderPanel.getBorderedComponent(new JLabel(icon), 5, 5, 5, 5);
 	}
-	
+
 	@Override
 	public Parameter[] getParameters() {
 		return new Parameter[] {
-				new BooleanParameter(setLabel, "Show Frequency Information", "If enabled, the frequency information will be added to the node labels."),
+				new BooleanParameter(setLabel, "Show Frequency Information",
+						"If enabled, the frequency information will be added to the node labels."),
 				new BooleanParameter(removeExistingDatamapping, "Remove existing data",
 						"If disabled, a additional mapping is performed, existing data is not removed."),
 				new BooleanParameter(processUpstreamOfSelection, "Process upstream",
 						"If enabled, not only the selection is processed, but also all nodes upstream.")
-		
+
 		};
 	}
-	
+
 	@Override
 	public void setParameters(Parameter[] params) {
 		int i = 0;
@@ -114,11 +96,7 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 		removeExistingDatamapping = ((BooleanParameter) params[i++]).getBoolean().booleanValue();
 		processUpstreamOfSelection = ((BooleanParameter) params[i++]).getBoolean().booleanValue();
 	}
-	
-	/*
-	 * (non-Javadoc)
-	 * @see org.graffiti.plugin.algorithm.Algorithm#execute()
-	 */
+
 	public void execute() {
 		try {
 			graph.getListenerManager().transactionStarted(this);
@@ -128,16 +106,16 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 			for (Node n : workingSet) {
 				knownClusterIDs.addAll(getLeafNodesClusterIDs(processedNodes, new NodeHelper(n)));
 			}
-			
+
 			final boolean fsl = setLabel;
-			
+
 			/**
 			 * Used in case upstream-processing is used.
 			 */
 			final HashSet<Node> specialModeValidLeafNodes = new HashSet<Node>(workingSet);
-			
+
 			ExecutorService run = Executors.newFixedThreadPool(1); // SystemAnalysis.getNumberOfCPUs());
-			
+
 			HashSet<Node> hierarchyNodesToBeProcessed = new HashSet<Node>();
 			if (processUpstreamOfSelection) {
 				// add upstream nodes
@@ -145,16 +123,17 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 					if (n.getOutDegree() > 0)
 						processUpstreamNodes(n, hierarchyNodesToBeProcessed);
 			}
-			
+
 			hierarchyNodesToBeProcessed.addAll(workingSet);
-			
+
 			for (Node n : hierarchyNodesToBeProcessed) {
 				final NodeHelper nh = new NodeHelper(n);
 				String clusterId = nh.getClusterID(null);
 				if (clusterId == null || clusterId.length() <= 0 || !knownClusterIDs.contains(clusterId)) {
 					run.submit(new Runnable() {
 						public void run() {
-							processNode(nh, knownClusterIDs, fsl, removeExistingDatamapping, processUpstreamOfSelection, specialModeValidLeafNodes);
+							processNode(nh, knownClusterIDs, fsl, removeExistingDatamapping, processUpstreamOfSelection,
+									specialModeValidLeafNodes);
 						}
 					});
 				}
@@ -172,11 +151,12 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 			graph.getListenerManager().transactionFinished(this);
 		}
 	}
-	
-	private void processNode(NodeHelper nh, TreeSet<String> knownClusterIDs, boolean setLabel, boolean removeExistingDataMapping,
-			boolean specialModeUpstreamProcessing, HashSet<Node> specialModeValidLeafNodes) {
+
+	private static void processNode(NodeHelper nh, TreeSet<String> knownClusterIDs, boolean setLabel,
+			boolean removeExistingDataMapping, boolean specialModeUpstreamProcessing,
+			HashSet<Node> specialModeValidLeafNodes) {
 		HashSet<Node> childNodes = nh.getAllOutChildNodes();
-		
+
 		if (specialModeUpstreamProcessing) {
 			HashSet<Node> remove = new HashSet<Node>();
 			for (Node n : childNodes)
@@ -184,11 +164,11 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 					remove.add(n);
 			childNodes.removeAll(remove);
 		}
-		
+
 		TreeMap<String, Integer> cluster2frequency = new TreeMap<String, Integer>();
 		for (String ci : knownClusterIDs)
-			cluster2frequency.put(ci, new Integer(0));
-		
+			cluster2frequency.put(ci, Integer.valueOf(0));
+
 		for (Node n : childNodes) {
 			NodeHelper nnh = new NodeHelper(n);
 			if (nnh.getOutDegree() == 0) {
@@ -196,23 +176,23 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 				if (clusterID != null) {
 					Integer value = cluster2frequency.get(clusterID);
 					if (value == null)
-						value = new Integer(0);
-					cluster2frequency.put(clusterID, new Integer(value + 1));
+						value = Integer.valueOf(0);
+					cluster2frequency.put(clusterID, Integer.valueOf(value + 1));
 				}
 			}
 		}
-		
+
 		if (removeExistingDataMapping)
 			nh.removeDataMapping();
 		StringBuilder sb = null;
 		if (setLabel)
 			sb = new StringBuilder();
-		
+
 		for (String clusterID : cluster2frequency.keySet()) {
 			int plantID = nh.memGetPlantID(clusterID, "", "", "", "");
 			Integer value = cluster2frequency.get(clusterID);
 			if (value == null) {
-				nh.memSample(new Double(0), -1, plantID, "frequency", "-1", new Integer(-1));
+				nh.memSample(Double.valueOf(0), -1, plantID, "frequency", "-1", Integer.valueOf(-1));
 				if (sb != null) {
 					if (sb.length() > 0)
 						sb.append(", 0");
@@ -220,7 +200,7 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 						sb.append("0");
 				}
 			} else {
-				nh.memSample(new Double(value), -1, plantID, "frequency", "-1", new Integer(-1));
+				nh.memSample(Double.valueOf(value), -1, plantID, "frequency", "-1", Integer.valueOf(-1));
 				if (sb != null) {
 					if (sb.length() > 0)
 						sb.append(";" + (int) value);
@@ -238,15 +218,14 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 			lbl = StringManipulationTools.stringReplace(lbl, ") (", "/");
 			nh.setLabel(lbl);
 		}
-		nh.memAddDataMapping("Cluster Distribution for " + nh.getLabel(),
-				"cluster frequency", null, "calculated analysis", "system", "Frequency of clusters in child nodes of a GO-Term-Hierarchy-Node", "");
-		
+		nh.memAddDataMapping("Cluster Distribution for " + nh.getLabel(), "cluster frequency", null,
+				"calculated analysis", "system", "Frequency of clusters in child nodes of a GO-Term-Hierarchy-Node",
+				"");
+
 		nh.setChartType(GraffitiCharts.PIE);
 	}
-	
-	public static Collection<String> getLeafNodesClusterIDs(
-			HashSet<Node> processedNodes,
-			NodeHelper nh) {
+
+	public static Collection<String> getLeafNodesClusterIDs(HashSet<Node> processedNodes, NodeHelper nh) {
 		Collection<String> result = new ArrayList<String>();
 		if (!processedNodes.contains(nh.getGraphNode())) {
 			processedNodes.add(nh.getGraphNode());
@@ -262,7 +241,7 @@ public class CreateGOchildrenClustersHistogramAlgorithm
 		}
 		return result;
 	}
-	
+
 	public void processUpstreamNodes(Node n, HashSet<Node> processedNodes) {
 		if (!processedNodes.contains(n)) {
 			processedNodes.add(n);
