@@ -7,8 +7,7 @@
 package de.ipk_gatersleben.ag_nw.graffiti.plugins.gui.layout_control.dbe.xml_data_tree_table_model;
 
 /**
- * @author Christian Klukas
- *         (c) 2004 IPK-Gatersleben
+ * @author Christian Klukas (c) 2004 IPK-Gatersleben
  */
 public class SpecialTableValue {
 	public double doubleValue;
@@ -16,36 +15,35 @@ public class SpecialTableValue {
 	public boolean isWhiteCell;
 	public boolean shiftRight;
 	private String startString;
-	
-	public SpecialTableValue(double doubleValue, Object otherValue,
-						boolean isWhiteCell, boolean shiftRight,
-						String startString) {
+
+	public SpecialTableValue(double doubleValue, Object otherValue, boolean isWhiteCell, boolean shiftRight,
+			String startString) {
 		this.doubleValue = doubleValue;
 		this.otherValue = otherValue;
 		this.isWhiteCell = isWhiteCell;
 		this.shiftRight = shiftRight;
 		this.startString = startString;
 	}
-	
+
 	@Override
 	public String toString() {
-		if (new Double(doubleValue).isNaN()) {
+		if (Double.valueOf(doubleValue).isNaN()) {
 			if (otherValue != null)
 				return startString + otherValue.toString();
 			else
-				return startString + new Double(doubleValue).toString();
+				return startString + Double.valueOf(doubleValue).toString();
 		} else {
 			if (shiftRight)
-				return startString + new Integer((int) Math.round(doubleValue)).toString() + " ";
+				return startString + Integer.valueOf((int) Math.round(doubleValue)).toString() + " ";
 			else
-				return startString + new Double(doubleValue).toString();
+				return startString + Double.valueOf(doubleValue).toString();
 		}
 	}
-	
+
 	/**
 	 * @return
 	 */
 	public boolean getIsDouble() {
-		return !new Double(doubleValue).isNaN();
+		return !Double.valueOf(doubleValue).isNaN();
 	}
 }
