@@ -44,33 +44,33 @@ import org.graffiti.plugin.Displayable;
 import de.ipk_gatersleben.ag_nw.graffiti.plugins.editcomponents.font_settings.FontAttribute;
 
 public class FontChooser extends JDialog implements ActionListener {
-	
+
 	private static final long serialVersionUID = 1L;
-	
+
 	JColorChooser colorChooser;
-	
+
 	JComboBox fontName;
-	
+
 	JCheckBox fontBold, fontItalic;
-	
+
 	JTextField fontSize;
-	
+
 	JLabel previewLabel;
-	
+
 	SimpleAttributeSet attributes;
-	
+
 	Font newFont;
-	
+
 	Color newColor;
-	
+
 	private static FontChooser fc = null;
-	
+
 	public FontChooser(Frame parent, Font initFont, Color initColor) {
 		super(parent, "Font Chooser", true);
 		// setSize(600, 550);
 		setBounds(parent.getX(), parent.getY(), 600, 550);
 		attributes = new SimpleAttributeSet();
-		
+
 		// Make sure that any way the user cancels the window does the right
 		// thing
 		addWindowListener(new WindowAdapter() {
@@ -79,44 +79,43 @@ public class FontChooser extends JDialog implements ActionListener {
 				closeAndCancel();
 			}
 		});
-		
+
 		// Start the long process of setting up our interface
 		Container c = getContentPane();
-		
+
 		JPanel fontPanel = new JPanel();
-		
-		String[] fontnames = GraphicsEnvironment.getLocalGraphicsEnvironment()
-							.getAvailableFontFamilyNames();
+
+		String[] fontnames = GraphicsEnvironment.getLocalGraphicsEnvironment().getAvailableFontFamilyNames();
 		fontName = new JComboBox(fontnames);
-		
+
 		fontName.addActionListener(this);
-		fontSize = new JTextField(new Integer(initFont.getSize()).toString(), 4);
+		fontSize = new JTextField(Integer.valueOf(initFont.getSize()).toString(), 4);
 		fontSize.setHorizontalAlignment(SwingConstants.RIGHT);
 		fontSize.addActionListener(this);
 		fontSize.addFocusListener(new FocusListener() {
 			public void focusGained(FocusEvent e) {
 			}
-			
+
 			public void focusLost(FocusEvent e) {
 				actionPerformed(null);
 			}
 		});
-		
+
 		fontBold = new JCheckBox("Bold");
 		fontBold.setSelected(initFont.isBold());
 		fontBold.addActionListener(this);
 		fontItalic = new JCheckBox("Italic");
 		fontItalic.setSelected(initFont.isItalic());
 		fontItalic.addActionListener(this);
-		
+
 		fontPanel.add(fontName);
 		fontPanel.add(new JLabel(" Size: "));
 		fontPanel.add(fontSize);
 		fontPanel.add(fontBold);
 		fontPanel.add(fontItalic);
-		
+
 		c.add(fontPanel, BorderLayout.NORTH);
-		
+
 		// Set up the color chooser panel and attach a change listener so that
 		// color updates get reflected in our preview label.
 		colorChooser = new JColorChooser(initColor);
@@ -126,12 +125,12 @@ public class FontChooser extends JDialog implements ActionListener {
 			}
 		});
 		c.add(colorChooser, BorderLayout.CENTER);
-		
+
 		JPanel previewPanel = new JPanel(new BorderLayout());
 		previewLabel = new JLabel("Here's a sample of this font.");
 		previewLabel.setForeground(colorChooser.getColor());
 		previewPanel.add(previewLabel, BorderLayout.CENTER);
-		
+
 		// Add in the Ok and Cancel buttons for our dialog box
 		JButton okButton = new JButton("Ok");
 		okButton.addActionListener(new ActionListener() {
@@ -145,34 +144,30 @@ public class FontChooser extends JDialog implements ActionListener {
 				closeAndCancel();
 			}
 		});
-		
+
 		JPanel controlPanel = new JPanel();
 		controlPanel.add(okButton);
 		controlPanel.add(cancelButton);
 		previewPanel.add(controlPanel, BorderLayout.SOUTH);
-		
+
 		// Give the preview label room to grow.
 		previewPanel.setMinimumSize(new Dimension(100, 100));
 		previewPanel.setPreferredSize(new Dimension(100, 100));
-		
+
 		c.add(previewPanel, BorderLayout.SOUTH);
 		updateFontAndColor(initFont, initColor);
 	}
-	
+
 	// Ok, something in the font changed, so figure that out and make a
 	// new font for the preview label
 	public void actionPerformed(ActionEvent ae) {
 		// Check the name of the font
-		if (!StyleConstants.getFontFamily(attributes).equals(
-							fontName.getSelectedItem())) {
-			StyleConstants.setFontFamily(attributes, (String) fontName
-								.getSelectedItem());
+		if (!StyleConstants.getFontFamily(attributes).equals(fontName.getSelectedItem())) {
+			StyleConstants.setFontFamily(attributes, (String) fontName.getSelectedItem());
 		}
 		// Check the font size (no error checking yet)
-		if (StyleConstants.getFontSize(attributes) != Integer.parseInt(fontSize
-							.getText())) {
-			StyleConstants.setFontSize(attributes, Integer.parseInt(fontSize
-								.getText()));
+		if (StyleConstants.getFontSize(attributes) != Integer.parseInt(fontSize.getText())) {
+			StyleConstants.setFontSize(attributes, Integer.parseInt(fontSize.getText()));
 		}
 		// Check to see if the font should be bold
 		if (StyleConstants.isBold(attributes) != fontBold.isSelected()) {
@@ -185,7 +180,7 @@ public class FontChooser extends JDialog implements ActionListener {
 		// and update our preview label
 		updatePreviewFont();
 	}
-	
+
 	// Get the appropriate font from our attributes object and update
 	// the preview label
 	protected void updatePreviewFont() {
@@ -193,70 +188,64 @@ public class FontChooser extends JDialog implements ActionListener {
 		boolean bold = StyleConstants.isBold(attributes);
 		boolean ital = StyleConstants.isItalic(attributes);
 		int size = StyleConstants.getFontSize(attributes);
-		
+
 		// Bold and italic donâ€™t work properly in beta 4.
-		Font f = new Font(name,
-							(bold ? Font.BOLD : 0) + (ital ? Font.ITALIC : 0), size);
+		Font f = new Font(name, (bold ? Font.BOLD : 0) + (ital ? Font.ITALIC : 0), size);
 		previewLabel.setFont(f);
 	}
-	
+
 	// Get the appropriate color from our chooser and update previewLabel
 	protected void updatePreviewColor() {
 		previewLabel.setForeground(colorChooser.getColor());
 		// Manually force the label to repaint
 		previewLabel.repaint();
 	}
-	
+
 	public Font getNewFont() {
 		return newFont;
 	}
-	
+
 	public Color getNewColor() {
 		return newColor;
 	}
-	
+
 	public AttributeSet getAttributes() {
 		return attributes;
 	}
-	
+
 	public void closeAndSave() {
 		// Save font & color information
 		newFont = previewLabel.getFont();
 		newColor = previewLabel.getForeground();
-		
+
 		// Close the window
 		setVisible(false);
 	}
-	
+
 	public void closeAndCancel() {
 		// Erase any font information and then close the window
 		newFont = null;
 		newColor = null;
 		setVisible(false);
 	}
-	
+
 	public static FontChooser showFontChooser(Displayable disp) {
 		if (fc == null)
-			fc = new FontChooser(
-								GravistoService.getInstance().getMainFrame(),
-								((FontAttribute) disp).getFont(),
-								((FontAttribute) disp).getColor());
+			fc = new FontChooser(GravistoService.getInstance().getMainFrame(), ((FontAttribute) disp).getFont(),
+					((FontAttribute) disp).getColor());
 		else {
-			fc.updateFontAndColor(
-								((FontAttribute) disp).getFont(),
-								((FontAttribute) disp).getColor()
-								);
+			fc.updateFontAndColor(((FontAttribute) disp).getFont(), ((FontAttribute) disp).getColor());
 		}
 		fc.setVisible(true);
 		return fc;
 	}
-	
+
 	private void updateFontAndColor(Font initFont, Color color) {
 		for (int i = 0; i < fontName.getItemCount(); i++) {
 			if (fontName.getItemAt(i).equals(initFont.getName()))
 				fontName.setSelectedIndex(i);
 		}
-		fontSize.setText(new Integer(initFont.getSize()).toString());
+		fontSize.setText(Integer.valueOf(initFont.getSize()).toString());
 		fontBold.setSelected(initFont.isBold());
 		fontItalic.setSelected(initFont.isItalic());
 		colorChooser.setColor(color);
