@@ -39,48 +39,43 @@ import de.ipk_gatersleben.ag_nw.graffiti.services.task.BackgroundTaskHelper;
 import de.ipk_gatersleben.ag_nw.graffiti.services.task.BackgroundTaskStatusProviderSupportingExternalCallImpl;
 
 public class AddInterestingAttributes extends AbstractAlgorithm {
-	
+
 	private boolean doSetDegree, doSetInDegree, doSetOutDegree, doSetClusteringCoeffUndir, doSetClusteringCoeffDir,
-						doSetDataMappingCnt, doSetSampleCnt, doSetNumberOfSignificantDifferences,
-						doSetNumberOfInSignificantDifferences, doSetAvgDataMappingValue, doSetMinimumSampleValue,
-						doSetMaximumSampleValue, doSetAvgSampleStdDev, doSetMinimumSampleReplicateValue,
-						doSetMaximumSampleReplicateValue, doSetMinimumValue, doSetMaximumValue, doSetTimePointCount, doSetLineCount,
-						doCalcAlpha, doCalcBeta, doCalcRatio, doCalcLineCorr;
-	
+			doSetDataMappingCnt, doSetSampleCnt, doSetNumberOfSignificantDifferences,
+			doSetNumberOfInSignificantDifferences, doSetAvgDataMappingValue, doSetMinimumSampleValue,
+			doSetMaximumSampleValue, doSetAvgSampleStdDev, doSetMinimumSampleReplicateValue,
+			doSetMaximumSampleReplicateValue, doSetMinimumValue, doSetMaximumValue, doSetTimePointCount, doSetLineCount,
+			doCalcAlpha, doCalcBeta, doCalcRatio, doCalcLineCorr;
+
 	private String seriesA, seriesB;
-	
+
 	public String getName() {
 		if (ReleaseInfo.getIsAllowedFeature(FeatureSet.DATAMAPPING))
 			return "Predefined Attributes";
 		else
 			return null;
 	}
-	
+
 	@Override
 	public String getCategory() {
 		return "Network.Compute Attributes";
 	}
-	
+
 	@Override
 	public Set<Category> getSetCategory() {
-		return new HashSet<Category>(Arrays.asList(
-				Category.GRAPH,
-				Category.ANNOTATION,
-				Category.COMPUTATION
-				));
+		return new HashSet<Category>(Arrays.asList(Category.GRAPH, Category.ANNOTATION, Category.COMPUTATION));
 	}
 
-	
 	@Override
 	public String getDescription() {
 		return "<html>" + "With this command new attributes are added to the graph nodes and<br>"
-							+ "edges, depending on the settings you choose below.<br><br>"
-							+ "Uncheck any setting, to remove the result of prior calculations from the<br>"
-							+ "working-set of nodes and edges.<br>"
-							+ "Do not forget to perform this command again, as soon as new information<br>"
-							+ "should be processed.<br><br>";
+				+ "edges, depending on the settings you choose below.<br><br>"
+				+ "Uncheck any setting, to remove the result of prior calculations from the<br>"
+				+ "working-set of nodes and edges.<br>"
+				+ "Do not forget to perform this command again, as soon as new information<br>"
+				+ "should be processed.<br><br>";
 	}
-	
+
 	@Override
 	public Parameter[] getParameters() {
 		// degree, in- and out-degree
@@ -89,7 +84,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		// sample statistics (cnt, min, max, avg)
 		// data values statistics (min, max)
 		// time series statistics (timepoint-count, (alpha, beta) - min, max, avg)
-		
+
 		ArrayList<String> allLines = new ArrayList<String>();
 		HashSet<String> knownLines = new HashSet<String>();
 		boolean hasMappingData = false;
@@ -119,46 +114,64 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				seriesB = null;
 			}
 		}
-		
+
 		// allLines.clear();
-		
+
 		return new Parameter[] {
-							new BooleanParameter(true, "<html>" + "Node Centralities<small><ul><li>degree, clustering coeff.", ""),
-							hasMappingData ? new BooleanParameter(true, "<html>"
-												+ "Mapping Statistics<small><ul><li>number of mappings and number of lines", "") : null,
-							hasMappingData ? new BooleanParameter(true, "<html>" + "Significant Mean-Differences<br>"
-												+ "(requires prior t- or U-test)<small><ul>"
-												+ "<li>number of samples with (in)significant mean differences in comparison to control", "") : null,
-								hasMappingData ? new BooleanParameter(true, "<html>" + "Sample Statistics<small><ul>"
-													+ "<li>Number of samples" + "<li>Minimum/maximum/sum of sample averages"
-													+ "<li>Average of sample averages" + "<li>Average of sample standard deviations"
-													+ "<li>Minimum/maximum sample replicate count", "") : null,
-										hasMappingData ? new BooleanParameter(true, "<html>" + "Replicate-Value Statistics<small><ul>"
-															+ "<li>Minimum/maximum of all mapped values", "") : null,
-												hasMappingData ? new BooleanParameter(true,
-																	"<html>" + "Time-Series Statistics<small><ul>" + "<li>Number of different time points"
-																						+ "<li>Linear regression: calculate &#945; and &#946; values", "") : null,
-														allLines.size() >= 2 ? new BooleanParameter(true, "<html>"
-																			+ "Ratio and correlation calculation for selected lines<small><ul>" + "<li>"
-																			+ "For each time point the ratio of the sample values of the two selected<br>"
-																			+ "lines (A/B) is calculated. The individual ratios as well as the<br>"
-																			+ "min/max/avg ratios are calculated and stored.", "") : null,
-																allLines.size() >= 2 ? new BooleanParameter(true, "<html><small><ul>" + "<li>"
-																					+ "For each substance the correlation (different types and settings) between<br>"
-																					+ "the data for the selected lines is calculated.", "") : null,
-																		allLines.size() >= 2 ? new ObjectListParameter(seriesA, "<html><small><ul><li>Line Selection: Line A",
-																							"",
-																							allLines) : null,
-																				allLines.size() >= 2 ? new ObjectListParameter(seriesB,
-																									"<html><small><ul><li>Line Selection: Line B", "",
-																									allLines) : null };
+				new BooleanParameter(true, "<html>" + "Node Centralities<small><ul><li>degree, clustering coeff.", ""),
+				hasMappingData ? new BooleanParameter(true,
+						"<html>" + "Mapping Statistics<small><ul><li>number of mappings and number of lines", "")
+						: null,
+				hasMappingData ? new BooleanParameter(true, "<html>" + "Significant Mean-Differences<br>"
+						+ "(requires prior t- or U-test)<small><ul>"
+						+ "<li>number of samples with (in)significant mean differences in comparison to control", "")
+						: null,
+				hasMappingData
+						? new BooleanParameter(true,
+								"<html>" + "Sample Statistics<small><ul>" + "<li>Number of samples"
+										+ "<li>Minimum/maximum/sum of sample averages"
+										+ "<li>Average of sample averages" + "<li>Average of sample standard deviations"
+										+ "<li>Minimum/maximum sample replicate count",
+								"")
+						: null,
+				hasMappingData
+						? new BooleanParameter(true,
+								"<html>" + "Replicate-Value Statistics<small><ul>"
+										+ "<li>Minimum/maximum of all mapped values",
+								"")
+						: null,
+				hasMappingData
+						? new BooleanParameter(true,
+								"<html>" + "Time-Series Statistics<small><ul>" + "<li>Number of different time points"
+										+ "<li>Linear regression: calculate &#945; and &#946; values",
+								"")
+						: null,
+				allLines.size() >= 2
+						? new BooleanParameter(true,
+								"<html>" + "Ratio and correlation calculation for selected lines<small><ul>" + "<li>"
+										+ "For each time point the ratio of the sample values of the two selected<br>"
+										+ "lines (A/B) is calculated. The individual ratios as well as the<br>"
+										+ "min/max/avg ratios are calculated and stored.",
+								"")
+						: null,
+				allLines.size() >= 2 ? new BooleanParameter(true,
+						"<html><small><ul>" + "<li>"
+								+ "For each substance the correlation (different types and settings) between<br>"
+								+ "the data for the selected lines is calculated.",
+						"") : null,
+				allLines.size() >= 2
+						? new ObjectListParameter(seriesA, "<html><small><ul><li>Line Selection: Line A", "", allLines)
+						: null,
+				allLines.size() >= 2
+						? new ObjectListParameter(seriesB, "<html><small><ul><li>Line Selection: Line B", "", allLines)
+						: null };
 	}
-	
+
 	@Override
 	public boolean isLayoutAlgorithm() {
 		return false;
 	}
-	
+
 	@Override
 	public void setParameters(Parameter[] params) {
 		int degree = 0;
@@ -167,7 +180,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		int samplestat = 3;
 		int valuestat = 4;
 		int timestat = 5;
-		
+
 		doSetDegree = ((BooleanParameter) params[degree]).getBoolean();
 		doSetInDegree = ((BooleanParameter) params[degree]).getBoolean();
 		doSetOutDegree = ((BooleanParameter) params[degree]).getBoolean();
@@ -221,11 +234,11 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 			}
 		}
 	}
-	
+
 	public void execute() {
 		final Graph graph2 = graph;
 		final BackgroundTaskStatusProviderSupportingExternalCallImpl status = new BackgroundTaskStatusProviderSupportingExternalCallImpl(
-							"Evaluate Properties", "");
+				"Evaluate Properties", "");
 		final Collection<GraphElement> worklist = getSelectedOrAllGraphElements();
 		BackgroundTaskHelper.issueSimpleTask(getName(), "Please wait...", new Runnable() {
 			public void run() {
@@ -247,7 +260,8 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 						processDataMappingCountAttribute(folder, ge, doSetDataMappingCnt);
 						processSampleCountAttribute(folder, ge, doSetSampleCnt);
 						processSignificantDifferencesCountAttribute(folder, ge, doSetNumberOfSignificantDifferences);
-						processInSignificantDifferencesCountAttribute(folder, ge, doSetNumberOfInSignificantDifferences);
+						processInSignificantDifferencesCountAttribute(folder, ge,
+								doSetNumberOfInSignificantDifferences);
 						processSampleMinimumValueAttribute(folder, ge, doSetMinimumSampleValue);
 						processSampleAvgAndSumValueAttribute(folder, ge, doSetAvgDataMappingValue);
 						processSampleMaximumValueAttribute(folder, ge, doSetMaximumSampleValue);
@@ -278,7 +292,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 			}
 		}, null, status);
 	}
-	
+
 	private void processDegreeAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "degree");
@@ -287,16 +301,16 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		if (ge instanceof Edge) {
 			Edge e = (Edge) ge;
 			if (e.getSource() == e.getTarget())
-				setAttribute(ge, folder, "degree", new Integer(1));
+				setAttribute(ge, folder, "degree", Integer.valueOf(1));
 			else
-				setAttribute(ge, folder, "degree", new Integer(2));
+				setAttribute(ge, folder, "degree", Integer.valueOf(2));
 		}
 		if (ge instanceof Node) {
 			Node n = (Node) ge;
-			setAttribute(ge, folder, "degree", new Integer(n.getDegree()));
+			setAttribute(ge, folder, "degree", Integer.valueOf(n.getDegree()));
 		}
 	}
-	
+
 	private void processInDegreeAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "degree_in");
@@ -304,10 +318,10 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (ge instanceof Node) {
 			Node n = (Node) ge;
-			setAttribute(ge, folder, "degree_in", new Integer(n.getInDegree()));
+			setAttribute(ge, folder, "degree_in", Integer.valueOf(n.getInDegree()));
 		}
 	}
-	
+
 	private void processOutDegreeAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "degree_out");
@@ -315,10 +329,10 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (ge instanceof Node) {
 			Node n = (Node) ge;
-			setAttribute(ge, folder, "degree_out", new Integer(n.getOutDegree()));
+			setAttribute(ge, folder, "degree_out", Integer.valueOf(n.getOutDegree()));
 		}
 	}
-	
+
 	private void processClusteringCoeffUndirAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "clustering_coeff_undir");
@@ -331,7 +345,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				setAttribute(ge, folder, "clustering_coeff_undir", res);
 		}
 	}
-	
+
 	private void processClusteringCoeffDirAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "clustering_coeff_dir");
@@ -344,16 +358,16 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				setAttribute(ge, folder, "clustering_coeff_dir", res);
 		}
 	}
-	
+
 	private void processDataMappingCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "datamapping_cnt");
 			return;
 		}
 		GraphElementHelper geh = new GraphElementHelper(ge);
-		setAttribute(ge, folder, "datamapping_cnt", new Integer(geh.getDataMappings().size()));
+		setAttribute(ge, folder, "datamapping_cnt", Integer.valueOf(geh.getDataMappings().size()));
 	}
-	
+
 	private void processSampleCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_cnt");
@@ -361,9 +375,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		GraphElementHelper geh = new GraphElementHelper(ge);
 		int samples = geh.getMappedSampleData().size();
-		setAttribute(ge, folder, "sample_cnt", new Integer(samples));
+		setAttribute(ge, folder, "sample_cnt", Integer.valueOf(samples));
 	}
-	
+
 	private void processSignificantDifferencesCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "significant_different_cnt");
@@ -380,9 +394,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				}
 			}
 		}
-		setAttribute(ge, folder, "significant_different_cnt", new Integer(cnt));
+		setAttribute(ge, folder, "significant_different_cnt", Integer.valueOf(cnt));
 	}
-	
+
 	private void processInSignificantDifferencesCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "significant_not_different_cnt");
@@ -399,9 +413,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				}
 			}
 		}
-		setAttribute(ge, folder, "significant_not_different_cnt", new Integer(cnt));
+		setAttribute(ge, folder, "significant_not_different_cnt", Integer.valueOf(cnt));
 	}
-	
+
 	private void processSampleMinimumValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_values_min");
@@ -419,9 +433,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (!(min < Double.MAX_VALUE))
 			min = Double.NaN;
-		setAttribute(ge, folder, "sample_values_min", new Double(min));
+		setAttribute(ge, folder, "sample_values_min", Double.valueOf(min));
 	}
-	
+
 	private void processSampleAvgAndSumValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_values_avg");
@@ -444,10 +458,10 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 			avg = Double.NaN;
 		else
 			avg = sum / cnt;
-		setAttribute(ge, folder, "sample_values_avg", new Double(avg));
-		setAttribute(ge, folder, "sample_values_sum", new Double(sum));
+		setAttribute(ge, folder, "sample_values_avg", Double.valueOf(avg));
+		setAttribute(ge, folder, "sample_values_sum", Double.valueOf(sum));
 	}
-	
+
 	private void processSampleMaximumValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_values_max");
@@ -465,9 +479,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (!(max > Double.NEGATIVE_INFINITY))
 			max = Double.NaN;
-		setAttribute(ge, folder, "sample_values_max", new Double(max));
+		setAttribute(ge, folder, "sample_values_max", Double.valueOf(max));
 	}
-	
+
 	private void processSampleAvgStdDevValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_stddev_avg");
@@ -487,9 +501,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		double avg = Double.NaN;
 		if (cnt > 0)
 			avg = sum / cnt;
-		setAttribute(ge, folder, "sample_stddev_avg", new Double(avg));
+		setAttribute(ge, folder, "sample_stddev_avg", Double.valueOf(avg));
 	}
-	
+
 	private void processSampleMinimumReplicateCountValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_replicate_cnt_min");
@@ -507,9 +521,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (minReplCnt == Integer.MAX_VALUE)
 			minReplCnt = 0;
-		setAttribute(ge, folder, "sample_replicate_cnt_min", new Integer(minReplCnt));
+		setAttribute(ge, folder, "sample_replicate_cnt_min", Integer.valueOf(minReplCnt));
 	}
-	
+
 	private void processSampleMaximumReplicateCountValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_replicate_cnt_max");
@@ -527,9 +541,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (maxReplCnt == Integer.MIN_VALUE)
 			maxReplCnt = 0;
-		setAttribute(ge, folder, "sample_replicate_cnt_max", new Integer(maxReplCnt));
+		setAttribute(ge, folder, "sample_replicate_cnt_max", Integer.valueOf(maxReplCnt));
 	}
-	
+
 	private void processReplicatesMinimumValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_replicate_values_min");
@@ -549,9 +563,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (!(min < Double.MAX_VALUE))
 			min = Double.NaN;
-		setAttribute(ge, folder, "sample_replicate_values_min", new Double(min));
+		setAttribute(ge, folder, "sample_replicate_values_min", Double.valueOf(min));
 	}
-	
+
 	private void processReplicatesMaximumValueAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "sample_replicate_values_max");
@@ -571,9 +585,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		if (!(max > Double.NEGATIVE_INFINITY))
 			max = Double.NaN;
-		setAttribute(ge, folder, "sample_replicate_values_max", new Double(max));
+		setAttribute(ge, folder, "sample_replicate_values_max", Double.valueOf(max));
 	}
-	
+
 	private void processDifferentTimpointsCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "samples_different_timepoints_cnt");
@@ -588,9 +602,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 				}
 			}
 		}
-		setAttribute(ge, folder, "samples_different_timepoints_cnt", new Integer(timePoints.size()));
+		setAttribute(ge, folder, "samples_different_timepoints_cnt", Integer.valueOf(timePoints.size()));
 	}
-	
+
 	private void processDifferentLinesCountAttribute(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "lines_cnt");
@@ -601,9 +615,9 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		for (SubstanceInterface md : geh.getDataMappings()) {
 			cnt += md.size();
 		}
-		setAttribute(ge, folder, "lines_cnt", new Integer(cnt));
+		setAttribute(ge, folder, "lines_cnt", Integer.valueOf(cnt));
 	}
-	
+
 	private void calculateAlpha(String folder, GraphElement ge, boolean calc) {
 		if (!calc) {
 			AttributeHelper.deleteAttribute(ge, folder, "series_alpha_*");
@@ -621,7 +635,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 					minAlpha = alpha;
 				if (alpha > maxAlpha)
 					maxAlpha = alpha;
-				setAttribute(ge, folder, "series_alpha_" + cnt, new Double(alpha));
+				setAttribute(ge, folder, "series_alpha_" + cnt, Double.valueOf(alpha));
 				sum += alpha;
 				cnt++;
 			}
@@ -633,14 +647,14 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 			aa = sum / cnt;
 		if (cnt > 1) {
 			if (!Double.isNaN(aa))
-				AttributeHelper.setAttribute(ge, folder, "series_alpha_avg", new Double(aa));
+				AttributeHelper.setAttribute(ge, folder, "series_alpha_avg", Double.valueOf(aa));
 			if ((minAlpha < Double.MAX_VALUE))
-				AttributeHelper.setAttribute(ge, folder, "series_alpha_min", new Double(minAlpha));
+				AttributeHelper.setAttribute(ge, folder, "series_alpha_min", Double.valueOf(minAlpha));
 			if ((maxAlpha > Double.NEGATIVE_INFINITY))
-				AttributeHelper.setAttribute(ge, folder, "series_alpha_max", new Double(maxAlpha));
+				AttributeHelper.setAttribute(ge, folder, "series_alpha_max", Double.valueOf(maxAlpha));
 		}
 	}
-	
+
 	private void calculateBeta(String folder, GraphElement ge, boolean calc) {
 		AttributeHelper.deleteAttribute(ge, folder, "series_beta_*");
 		if (!calc) {
@@ -658,7 +672,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 					minBeta = beta;
 				if (beta > maxBeta)
 					maxBeta = beta;
-				setAttribute(ge, folder, "series_beta_" + cnt, new Double(beta));
+				setAttribute(ge, folder, "series_beta_" + cnt, Double.valueOf(beta));
 				sum += beta;
 				cnt++;
 			}
@@ -670,14 +684,14 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 			avgbeta = sum / cnt;
 		if (cnt > 0) {
 			if (!Double.isNaN(avgbeta))
-				AttributeHelper.setAttribute(ge, folder, "series_beta_avg", new Double(avgbeta));
+				AttributeHelper.setAttribute(ge, folder, "series_beta_avg", Double.valueOf(avgbeta));
 			if ((minBeta < Double.MAX_VALUE))
-				AttributeHelper.setAttribute(ge, folder, "series_beta_min", new Double(minBeta));
+				AttributeHelper.setAttribute(ge, folder, "series_beta_min", Double.valueOf(minBeta));
 			if ((maxBeta > Double.NEGATIVE_INFINITY))
-				AttributeHelper.setAttribute(ge, folder, "series_beta_max", new Double(maxBeta));
+				AttributeHelper.setAttribute(ge, folder, "series_beta_max", Double.valueOf(maxBeta));
 		}
 	}
-	
+
 	private void calculateRatio(String folder, GraphElement ge, boolean calc) {
 		AttributeHelper.deleteAttribute(ge, folder, "sample_ratio_*");
 		if (!calc) {
@@ -722,23 +736,23 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 					maxRatio = ratio;
 				if (time.intValue() >= 0) {
 					String tt = getZeros(time.intValue(), 3);
-					setAttribute(ge, folder, "sample_ratio_" + tt, new Double(ratio));
+					setAttribute(ge, folder, "sample_ratio_" + tt, Double.valueOf(ratio));
 				} else
-					setAttribute(ge, folder, "sample_ratio_", new Double(ratio));
+					setAttribute(ge, folder, "sample_ratio_", Double.valueOf(ratio));
 				sum += ratio;
 				cnt++;
 			}
 		}
 		if (cnt > 0) {
-			setAttribute(ge, folder, "sample_ratio_avg", new Double(sum / cnt));
+			setAttribute(ge, folder, "sample_ratio_avg", Double.valueOf(sum / cnt));
 			if ((minRatio < Double.MAX_VALUE))
-				AttributeHelper.setAttribute(ge, folder, "sample_ratio_min", new Double(minRatio));
+				AttributeHelper.setAttribute(ge, folder, "sample_ratio_min", Double.valueOf(minRatio));
 			if ((maxRatio > Double.NEGATIVE_INFINITY))
-				AttributeHelper.setAttribute(ge, folder, "sample_ratio_max", new Double(maxRatio));
-			
+				AttributeHelper.setAttribute(ge, folder, "sample_ratio_max", Double.valueOf(maxRatio));
+
 		}
 	}
-	
+
 	private void calculateLineCorr(String folder, GraphElement ge, boolean calc) {
 		AttributeHelper.deleteAttribute(ge, folder, "corr_*");
 		if (!calc) {
@@ -746,7 +760,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		MyXML_XYDataset datasetAvg = new MyXML_XYDataset();
 		MyXML_XYDataset datasetVal = new MyXML_XYDataset();
-		
+
 		Iterable<SubstanceInterface> mappedDataList = Experiment2GraphHelper.getMappedDataListFromGraphElement(ge);
 		if (mappedDataList != null) {
 			SubstanceInterface xmldata1 = null;
@@ -788,27 +802,27 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		setAttribute(ge, folder, "corr_rank_sample_avg_over_time_r", cr3.getMaxR());
 		setAttribute(ge, folder, "corr_rank_repl_values_r", cr4.getMaxR());
 	}
-	
+
 	private void setAttribute(GraphElement ge, String folder, String name, Double value) {
 		if (value != null && !Double.isNaN(value))
 			AttributeHelper.setAttribute(ge, folder, name, value);
 	}
-	
+
 	private void setAttribute(GraphElement ge, String folder, String name, Float value) {
 		if (value != null && !Float.isNaN(value))
 			AttributeHelper.setAttribute(ge, folder, name, value);
 	}
-	
+
 	private void setAttribute(GraphElement ge, String folder, String name, String value) {
 		if (value != null)
 			AttributeHelper.setAttribute(ge, folder, name, value);
 	}
-	
+
 	private void setAttribute(GraphElement ge, String folder, String name, Integer value) {
 		if (value != null)
 			AttributeHelper.setAttribute(ge, folder, name, value);
 	}
-	
+
 	private String getZeros(int value, int len) {
 		String res = value + "";
 		if (value >= 0) {
@@ -817,7 +831,7 @@ public class AddInterestingAttributes extends AbstractAlgorithm {
 		}
 		return res;
 	}
-	
+
 	@Override
 	public boolean mayWorkOnMultipleGraphs() {
 		return true;
