@@ -38,16 +38,16 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 	private boolean values = false;
 	private boolean valuesAvg = false;
 	private boolean correlation = false;
-	
+
 	public void execute() {
 		StringBuilder result = new StringBuilder();
-		
+
 		result = doIt(result);
-		
+
 		ClipboardService.writeToClipboardAsText(result.toString());
 		MainFrame.showMessage("Information copied to clipboard!", MessageType.INFO);
 	}
-	
+
 	StringBuilder doIt(StringBuilder result) {
 		StringBuilder curRow = new StringBuilder();
 		graph.numberGraphElements();
@@ -73,7 +73,7 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 			addCol(result, curRow, "HEIGHT");
 		if (altIDs)
 			addCol(result, curRow, "Alt. IDs");
-		if (correlation){
+		if (correlation) {
 			addCol(result, curRow, "1:n Correlation");
 			addCol(result, curRow, "p-Value");
 		}
@@ -170,11 +170,13 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 				}
 			}
 			if (correlation) {
-				Double val = (Double) AttributeHelper.getAttributeValue(n, "statistics", "correlation_r", null, new Double(1d));
+				Double val = (Double) AttributeHelper.getAttributeValue(n, "statistics", "correlation_r", null,
+						Double.valueOf(1d));
 				addCol(result, curRow, val == null ? null : val + "");
-				val = (Double) AttributeHelper.getAttributeValue(n, "statistics", "correlation_prob", null, new Double(1d));
-				//reset val, if corr_prob attribute is not set during corr_analysis
-				if(val != null && val == Double.NEGATIVE_INFINITY)
+				val = (Double) AttributeHelper.getAttributeValue(n, "statistics", "correlation_prob", null,
+						Double.valueOf(1d));
+				// reset val, if corr_prob attribute is not set during corr_analysis
+				if (val != null && val == Double.NEGATIVE_INFINITY)
 					val = null;
 				addCol(result, curRow, val == null ? null : val + "");
 			}
@@ -183,21 +185,20 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 		}
 		return result;
 	}
-	
-	private void addCols(StringBuilder result, StringBuilder curRow,
-						Stack<Double> values2) {
+
+	private void addCols(StringBuilder result, StringBuilder curRow, Stack<Double> values2) {
 		if (values2 != null) {
 			ArrayList<Object> vals = new ArrayList<Object>(values2);
 			addCols(result, curRow, vals);
 		} else
 			addCol(result, curRow, null);
 	}
-	
+
 	private StringBuilder addRow(StringBuilder result) {
 		result.append("\n");
 		return new StringBuilder();
 	}
-	
+
 	void addCol(StringBuilder result, StringBuilder curRow, String col) {
 		if (curRow.length() > 0) {
 			result.append("\t");
@@ -208,7 +209,7 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 		result.append(col);
 		curRow.append(col);
 	}
-	
+
 	private void addCols(StringBuilder result, StringBuilder curRow, Collection<Object> vals) {
 		if (curRow.length() > 0) {
 			result.append("\t");
@@ -231,31 +232,25 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 			}
 		}
 	}
-	
+
 	@Override
 	public String getDescription() {
-		return "<html>With this command you may transfer attribute values<br>" +
-						"from the selected graph elements into a file.<br>" +
-						"Please specify relevant attributes:";
+		return "<html>With this command you may transfer attribute values<br>"
+				+ "from the selected graph elements into a file.<br>" + "Please specify relevant attributes:";
 	}
-	
+
 	@Override
 	public Parameter[] getParameters() {
-		return new Parameter[] {
-							new BooleanParameter(rownum, "Row", null),
-							new BooleanParameter(label, "Label", null),
-							new BooleanParameter(keggID, "KEGG ID", null),
-							new BooleanParameter(cluster, "Cluster ID", null),
-							new BooleanParameter(userURL, "User URL", null),
-							new BooleanParameter(keggURL, "KEGG Ref URL", null),
-							new BooleanParameter(pos, "X/Y-Pos", null),
-							new BooleanParameter(size, "Size", null),
-							new BooleanParameter(altIDs, "Alternative IDs", null),
-							new BooleanParameter(values, "Data mapping values", null),
-							new BooleanParameter(valuesAvg, "Average data mapping values", null),
-							new BooleanParameter(correlation, "Correlation", "The correlation (r) of this node") };
+		return new Parameter[] { new BooleanParameter(rownum, "Row", null), new BooleanParameter(label, "Label", null),
+				new BooleanParameter(keggID, "KEGG ID", null), new BooleanParameter(cluster, "Cluster ID", null),
+				new BooleanParameter(userURL, "User URL", null), new BooleanParameter(keggURL, "KEGG Ref URL", null),
+				new BooleanParameter(pos, "X/Y-Pos", null), new BooleanParameter(size, "Size", null),
+				new BooleanParameter(altIDs, "Alternative IDs", null),
+				new BooleanParameter(values, "Data mapping values", null),
+				new BooleanParameter(valuesAvg, "Average data mapping values", null),
+				new BooleanParameter(correlation, "Correlation", "The correlation (r) of this node") };
 	}
-	
+
 	@Override
 	public void setParameters(Parameter[] params) {
 		int i = 0;
@@ -272,26 +267,22 @@ public class CopyDataTableAlgorithm extends AbstractAlgorithm {
 		valuesAvg = ((BooleanParameter) params[i++]).getBoolean().booleanValue();
 		correlation = ((BooleanParameter) params[i++]).getBoolean().booleanValue();
 	}
-	
+
 	public String getName() {
 		if (ReleaseInfo.getIsAllowedFeature(FeatureSet.DATAMAPPING))
 			return "Copy Data Table...";
 		else
 			return null;
 	}
-	
+
 	@Override
 	public String getCategory() {
 		return "menu.edit";
 	}
-	
-	
+
 	@Override
 	public Set<Category> getSetCategory() {
-		return new HashSet<Category>(Arrays.asList(
-				Category.DATA,
-				Category.EXPORT
-				));
+		return new HashSet<Category>(Arrays.asList(Category.DATA, Category.EXPORT));
 	}
 
 }
