@@ -29,40 +29,36 @@ import de.ipk_gatersleben.ag_nw.graffiti.plugins.gui.editing_tools.script_helper
 import de.ipk_gatersleben.ag_nw.graffiti.plugins.gui.editing_tools.script_helper.SubstanceInterface;
 
 public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm {
-	
+
 	private final ArrayList<Integer> parametersToBeConsidered = new ArrayList<Integer>();
-	
+
 	private SetLabelModeOfOperation modeOfOperation = SetLabelModeOfOperation.setLabelAsSingleUniqueListDivideByDivider;
-	
+
 	private String modeOfOperationDividerForMappings = "<br>";
 	private String modeOfOperationDividerForSingleMapping = ", ";
-	
+
 	private boolean modeOfOperationIncludeEmptyValues = false;
 	private boolean modeOfOperationSetLabel = true;
 	private boolean modeOfOperationSetClusterID = false;
-	
+
 	public String getName() {
 		return "Set Label/Cluster ID";
 	}
-	
+
 	@Override
 	public String getCategory() {
 		return "Mapping.Alternate identifiers";
 	}
-	
+
 	@Override
 	public Set<Category> getSetCategory() {
-		return new HashSet<Category>(Arrays.asList(
-				Category.GRAPH,
-				Category.ANNOTATION,
-				Category.CLUSTER
-				));
+		return new HashSet<Category>(Arrays.asList(Category.GRAPH, Category.ANNOTATION, Category.CLUSTER));
 	}
-	
+
 	@Override
 	public void check() throws PreconditionException {
 		PreconditionException errors = new PreconditionException();
-		
+
 		if (graph == null) {
 			errors.add("No graph available!");
 		}
@@ -73,12 +69,12 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		if (maxID < 0) {
 			errors.add("No data mapping with defined alternative identifiers found!");
 		}
-		
+
 		if (!errors.isEmpty()) {
 			throw errors;
 		}
 	}
-	
+
 	@Override
 	public String getDescription() {
 		return "<html>" + "If only a single data annotation index is selected, the main ID<br>"
@@ -87,7 +83,7 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 				+ "this command. Please specify the modes of operation and select<br>"
 				+ "the data annotation idices to be processed:";
 	}
-	
+
 	@Override
 	public Parameter[] getParameters() {
 		int maxID = 0;
@@ -97,21 +93,23 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		ArrayList<String> selvals = new ArrayList<String>();
 		for (int i = 0; i <= maxID; i++) {
 			String s = "" + i;
-			String example = exampleValues.get(new Integer(i));
+			String example = exampleValues.get(Integer.valueOf(i));
 			if (example != null)
 				s += " (e.g. " + example + ")";
 			selvals.add(s);
 		}
-		return getParameters(new ObjectListParameter(modeOfOperation, "<html><b>Mode of Operation", null,
-				SetLabelModeOfOperation.values()), new StringParameter(modeOfOperationDividerForMappings,
-				"<html><b>Divider for multiple mappings", null), new StringParameter(
-				modeOfOperationDividerForSingleMapping, "<html><b>Divider for annotation list", null),
+		return getParameters(
+				new ObjectListParameter(modeOfOperation, "<html><b>Mode of Operation", null,
+						SetLabelModeOfOperation.values()),
+				new StringParameter(modeOfOperationDividerForMappings, "<html><b>Divider for multiple mappings", null),
+				new StringParameter(modeOfOperationDividerForSingleMapping, "<html><b>Divider for annotation list",
+						null),
 				new BooleanParameter(modeOfOperationIncludeEmptyValues, "<html><b>Include empty values", null),
-				new BooleanParameter(modeOfOperationSetLabel, "<html><b>Result: Set Label", null), new BooleanParameter(
-						modeOfOperationSetClusterID, "<html><b>Result: Set Cluster ID", null), selvals);
+				new BooleanParameter(modeOfOperationSetLabel, "<html><b>Result: Set Label", null),
+				new BooleanParameter(modeOfOperationSetClusterID, "<html><b>Result: Set Cluster ID", null), selvals);
 	}
-	
-	private Parameter[] getParameters(Parameter p1, Parameter p2, Parameter p3, Parameter p4, Parameter p5,
+
+	private static Parameter[] getParameters(Parameter p1, Parameter p2, Parameter p3, Parameter p4, Parameter p5,
 			Parameter p6, ArrayList<String> selvals) {
 		ArrayList<Parameter> result = new ArrayList<Parameter>();
 		result.add(p1);
@@ -126,18 +124,18 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		}
 		return result.toArray(new Parameter[] {});
 	}
-	
+
 	@Override
 	public void setParameters(Parameter[] params) {
 		int i = 0;
 		modeOfOperation = (SetLabelModeOfOperation) ((ObjectListParameter) params[i++]).getValue();
 		modeOfOperationDividerForMappings = (String) ((StringParameter) params[i++]).getValue();
 		modeOfOperationDividerForSingleMapping = (String) ((StringParameter) params[i++]).getValue();
-		
+
 		modeOfOperationIncludeEmptyValues = ((BooleanParameter) params[i++]).getBoolean();
 		modeOfOperationSetLabel = ((BooleanParameter) params[i++]).getBoolean();
 		modeOfOperationSetClusterID = ((BooleanParameter) params[i++]).getBoolean();
-		
+
 		parametersToBeConsidered.clear();
 		for (int i2 = i; i2 < params.length; i2++) {
 			if (!((BooleanParameter) params[i2]).getBoolean())
@@ -151,7 +149,7 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 			parametersToBeConsidered.add(idx);
 		}
 	}
-	
+
 	public void execute() {
 		if (parametersToBeConsidered.size() <= 0) {
 			MainFrame.showMessageDialog("No alternative identifier index has been selected in the parameter dialog.",
@@ -180,9 +178,8 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 				}
 				if (allNames.size() == 1)
 					md.setName(allNames.get(0));
-				else
-					if (allNames.size() == 0 && !modeOfOperationIncludeEmptyValues)
-						md.setName("");
+				else if (allNames.size() == 0 && !modeOfOperationIncludeEmptyValues)
+					md.setName("");
 				mappingStrings.add(allNames);
 			}
 			if (hasAltIDs) {
@@ -195,7 +192,7 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		}
 		graph.getListenerManager().transactionFinished(this);
 	}
-	
+
 	private String getResultLabel(String currentLabel, ArrayList<ArrayList<String>> mappingStrings) {
 		boolean htmlLabel = false;
 		if (currentLabel != null && currentLabel.trim().startsWith("<html>")) {
@@ -250,14 +247,14 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 				result.append(getListValue(listValues, divider1));
 			}
 		}
-		
+
 		if (htmlLabel)
 			return "<html>" + result.toString();
 		else
 			return result.toString();
 	}
-	
-	private String getMultipleListValues(String preMap, String postMap, ArrayList<ArrayList<String>> mappingStrings,
+
+	private static String getMultipleListValues(String preMap, String postMap, ArrayList<ArrayList<String>> mappingStrings,
 			String dividerInList) {
 		StringBuilder result = new StringBuilder();
 		for (ArrayList<String> v : mappingStrings) {
@@ -267,8 +264,8 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		}
 		return result.toString();
 	}
-	
-	private String getListValue(Collection<String> values, String divider) {
+
+	private static String getListValue(Collection<String> values, String divider) {
 		ArrayList<String> v = new ArrayList<String>(values);
 		StringBuilder res = new StringBuilder();
 		for (int i = 0; i < v.size(); i++) {
@@ -278,8 +275,8 @@ public class ReplaceLabelFromAlternativeSubstanceNames extends AbstractAlgorithm
 		}
 		return res.toString();
 	}
-	
-	public static int enumerateExistingAlternativeSubstanceIDsAndTheirExamples(Collection<GraphElement> graphElements,
+
+	public static int enumerateExistingAlternativeSubstanceIDsAndTheirExamples(Collection<? extends GraphElement> graphElements,
 			int maxID, HashMap<Integer, String> exampleValues) {
 		for (GraphElement ge : graphElements) {
 			GraphElementHelper geh = new GraphElementHelper(ge);
