@@ -52,11 +52,10 @@ import org.vanted.scaling.Toolbox;
 import org.vanted.scaling.scalers.component.*;
 
 /**
- * @author Christian Klukas
- *         (c) 2004 IPK-Gatersleben
+ * @author Christian Klukas (c) 2004 IPK-Gatersleben
  */
 public class FolderPanel extends JComponent {
-	
+
 	private static final long serialVersionUID = 1L;
 	private String title;
 	private boolean condensedState;
@@ -68,27 +67,27 @@ public class FolderPanel extends JComponent {
 	private Color backgroundColor = Color.WHITE;
 	int frameWidth = 2;
 	int emptyBorderWidth = 10;
-	
+
 	int colSpacing = 0;
 	int rowSpacing = 0;
-	
+
 	private double columnStyle1 = TableLayoutConstants.PREFERRED;
 	private double columnStyle2 = TableLayoutConstants.FILL;
-	
+
 	private ImageIcon condensedIcon;
 	private ImageIcon uncondensedIcon;
-	
+
 	private List<ActionListener> collapse_listeners = new ArrayList<ActionListener>();
-	
+
 	private JPanel rowPanel;
 	private static HashMap<String, Boolean> showCondensed = new HashMap<String, Boolean>();
 	private boolean showCondenseButton;
 	private boolean showHelpButton;
 	private JLabel titleLabel;
 	private boolean searchEnabled = false;
-	
+
 	private boolean sortedRows;
-	
+
 	private ArrayList<GuiRow> guiComponentRows = new ArrayList<GuiRow>();
 	private ArrayList<GuiRow> guiComponentInvisibleRows = new ArrayList<GuiRow>();
 	private ActionListener helpActionListener;
@@ -106,38 +105,33 @@ public class FolderPanel extends JComponent {
 	private Iconsize bigIcons = Iconsize.SMALL;
 	private boolean hideSearch;
 
-	//scaling fields
-	private float initialDPIvalue = DPIHelper.processEmulatedDPIValue(
-			DPIHelper.managePreferences(DPIHelper.VALUE_DEFAULT,
-					DPIHelper.PREFERENCES_GET));
+	// scaling fields
+	private float initialDPIvalue = DPIHelper
+			.processEmulatedDPIValue(DPIHelper.managePreferences(DPIHelper.VALUE_DEFAULT, DPIHelper.PREFERENCES_GET));
 	private float newInitial = initialDPIvalue;
 	private float newCurrent = -1f;
 	private HashMap<Integer, Float> baseDPIValues = new HashMap<>();
-	
-	
+
 	public void setIconSize(Iconsize bigIcons) {
 		this.bigIcons = bigIcons;
 	}
-	
-	public FolderPanel(String title, boolean openCondensed,
-						boolean showCondenseButton, boolean sortRows,
-						ActionListener helpActionListener) {
-		initComponent(title, openCondensed, showCondenseButton, sortRows,
-							helpActionListener);
+
+	public FolderPanel(String title, boolean openCondensed, boolean showCondenseButton, boolean sortRows,
+			ActionListener helpActionListener) {
+		initComponent(title, openCondensed, showCondenseButton, sortRows, helpActionListener);
 	}
-	
+
 	public void enableSearch(boolean enable) {
 		this.searchEnabled = enable;
 	}
-	
+
 	public void setColumnStyle(double left, double right) {
 		columnStyle1 = left;
 		columnStyle2 = right;
 	}
-	
-	private void initComponent(String title, boolean openCondensed,
-						boolean showCondenseButton, boolean sortRows,
-						ActionListener helpActionListener) {
+
+	private void initComponent(String title, boolean openCondensed, boolean showCondenseButton, boolean sortRows,
+			ActionListener helpActionListener) {
 		this.title = title;
 		this.showCondenseButton = showCondenseButton;
 		this.condensedState = openCondensed;
@@ -154,36 +148,33 @@ public class FolderPanel extends JComponent {
 		this.showHelpButton = helpActionListener != null;
 		addScalingListener();
 	}
-	
-	public FolderPanel(String title, boolean sortRows,
-						ActionListener helpActionListener, String helpTopic) {
+
+	public FolderPanel(String title, boolean sortRows, ActionListener helpActionListener, String helpTopic) {
 		if (showCondensed.containsKey(title)) {
 			Boolean showFolded = showCondensed.get(title);
-			initComponent(title, showFolded.booleanValue(), true, sortRows,
-								helpActionListener);
+			initComponent(title, showFolded.booleanValue(), true, sortRows, helpActionListener);
 		} else
 			initComponent(title, false, true, sortRows, helpActionListener);
 	}
-	
+
 	public FolderPanel(String title) {
 		this(title, false, false, false, null);
 	}
-	
+
 	public void setEmptyBorderWidth(int emptyBorderWidth) {
 		setFrameColor(frameColor, headingColor, frameWidth, emptyBorderWidth);
 	}
-	
+
 	public void setRowColSpacing(int rowSpacing, int colSpacing) {
 		this.rowSpacing = rowSpacing;
 		this.colSpacing = colSpacing;
 	}
-	
+
 	public Color getFrameColor() {
 		return frameColor;
 	}
-	
-	public void setFrameColor(Color frameColor, Color headingColor,
-						int frameWidth, int emptyBorderWidth) {
+
+	public void setFrameColor(Color frameColor, Color headingColor, int frameWidth, int emptyBorderWidth) {
 		this.frameColor = frameColor;
 		this.headingColor = headingColor;
 		this.frameWidth = frameWidth;
@@ -192,7 +183,7 @@ public class FolderPanel extends JComponent {
 		setBorder(BorderFactory.createLineBorder(frameColor, frameWidth));
 		layoutRows();
 	}
-	
+
 	public void setFrameColor(Color frameColor, Color headingColor) {
 		this.frameColor = frameColor;
 		this.headingColor = headingColor;
@@ -200,27 +191,25 @@ public class FolderPanel extends JComponent {
 		setBorder(BorderFactory.createLineBorder(frameColor, frameWidth));
 		layoutRows();
 	}
-	
+
 	@Override
 	public void setBackground(Color backgroundColor) {
 		this.backgroundColor = backgroundColor;
 	}
-	
-	public void addFirstGuiComponentRow(JComponent leftComponent,
-						JComponent rightComponent, boolean updateLayout, int spaceAroundComponents) {
+
+	public void addFirstGuiComponentRow(JComponent leftComponent, JComponent rightComponent, boolean updateLayout,
+			int spaceAroundComponents) {
 		int sp = spaceAroundComponents;
 		if (spaceAroundComponents == 0)
 			guiComponentRows.add(0, new GuiRow(leftComponent, rightComponent));
 		else
-			guiComponentRows.add(0, new GuiRow(
-								getBorderedComponent(leftComponent, sp, sp, sp, sp),
-								getBorderedComponent(rightComponent, sp, sp, sp, sp)));
+			guiComponentRows.add(0, new GuiRow(getBorderedComponent(leftComponent, sp, sp, sp, sp),
+					getBorderedComponent(rightComponent, sp, sp, sp, sp)));
 		if (updateLayout)
 			layoutRows();
 	}
-	
-	public GuiRow addGuiComponentRow(JComponent leftComponent,
-						JComponent rightComponent, boolean updateLayout) {
+
+	public GuiRow addGuiComponentRow(JComponent leftComponent, JComponent rightComponent, boolean updateLayout) {
 		synchronized (guiComponentRows) {
 			GuiRow gr = new GuiRow(leftComponent, rightComponent);
 			guiComponentRows.add(gr);
@@ -229,7 +218,7 @@ public class FolderPanel extends JComponent {
 			return gr;
 		}
 	}
-	
+
 	public void removeGuiComponentRow(GuiRow guiRow, boolean updateLayout) {
 		synchronized (guiComponentRows) {
 			guiComponentRows.remove(guiRow);
@@ -240,7 +229,7 @@ public class FolderPanel extends JComponent {
 		if (updateLayout)
 			layoutRows();
 	}
-	
+
 	public void exchangeGuiComponentRow(GuiRow guiRow, GuiRow newRow, boolean updateLayout) {
 		synchronized (guiComponentRows) {
 			int idx = guiComponentRows.indexOf(guiRow);
@@ -250,10 +239,11 @@ public class FolderPanel extends JComponent {
 				layoutRows();
 		}
 	}
-	
+
 	/**
-	 * Removes all current known GUI component rows from the internal list. Use <code>addGuiComponentRow</code> to refill this list and <code>layoutRows</code>
-	 * to fill the actual GUI of this component.
+	 * Removes all current known GUI component rows from the internal list. Use
+	 * <code>addGuiComponentRow</code> to refill this list and
+	 * <code>layoutRows</code> to fill the actual GUI of this component.
 	 */
 	public void clearGuiComponentList() {
 		guiComponentRows.clear();
@@ -263,30 +253,30 @@ public class FolderPanel extends JComponent {
 		if (currentSearchInputField != null)
 			currentSearchInputField.setText("");
 	}
-	
+
 	public void addGuiComponentRow(GuiRow row, boolean updateLayout) {
 		guiComponentRows.add(row);
 		if (updateLayout)
 			layoutRows();
 	}
-	
-	public static TableLayout getVSplitLayout(JComponent topComp,
-						JComponent bottomComp, double topSize, double bottomSize) {
+
+	public static TableLayout getVSplitLayout(JComponent topComp, JComponent bottomComp, double topSize,
+			double bottomSize) {
 		double border = 0;
 		double[][] size = { { border, TableLayoutConstants.FILL, border }, // Columns
 				{ border, topSize, bottomSize, border } }; // Rows
 		return new TableLayout(size);
 	}
-	
-	public static TableLayout getHSplitLayout(JComponent leftComponent,
-						JComponent rightComponent, double leftSize, double rightSize) {
+
+	public static TableLayout getHSplitLayout(JComponent leftComponent, JComponent rightComponent, double leftSize,
+			double rightSize) {
 		double border = 0;
 		double[][] size = { { border, leftSize, rightSize, border }, // Columns
 				{ border, TableLayoutConstants.PREFERRED, border } // ROWS
 		}; // Rows
 		return new TableLayout(size);
 	}
-	
+
 	public void layoutRows() {
 		if (!SwingUtilities.isEventDispatchThread()) {
 			SwingUtilities.invokeLater(new Runnable() {
@@ -295,22 +285,20 @@ public class FolderPanel extends JComponent {
 					return;
 				}
 			});
-		};
+		}
+		;
 		synchronized (guiComponentRows) {
 			checkCondensedState();
 			removeAll();
-			
+
 			rowPanel.removeAll();
-			
+
 			ArrayList<GuiRow> guiComponentRowsForCurrentPage = new ArrayList<GuiRow>();
-			guiComponentRowsForCurrentPage
-								.addAll(getFilteredList(guiComponentRows));
-			if (guiComponentRowsForCurrentPage.size() > maxRowCount
-								&& maxRowCount > 0) {
+			guiComponentRowsForCurrentPage.addAll(getFilteredList(guiComponentRows));
+			if (guiComponentRowsForCurrentPage.size() > maxRowCount && maxRowCount > 0) {
 				ArrayList<GuiRow> remove = new ArrayList<GuiRow>();
 				for (int i = 0; i < guiComponentRowsForCurrentPage.size(); i++) {
-					if (!(i >= currentPage * maxRowCount && i < (currentPage + 1)
-										* maxRowCount))
+					if (!(i >= currentPage * maxRowCount && i < (currentPage + 1) * maxRowCount))
 						remove.add(guiComponentRowsForCurrentPage.get(i));
 				}
 				if (remove.size() > 0) {
@@ -326,20 +314,15 @@ public class FolderPanel extends JComponent {
 			size[0][0] = columnStyle1; // first column //
 			// TableLayoutConstants.PREFERRED
 			size[0][1] = columnStyle2; // TableLayoutConstants.FILL;
-			
-			rowPanel.setBorder(BorderFactory.createEmptyBorder(
-								maxY > 0 ? emptyBorderWidth : 0, maxY > 0 ? emptyBorderWidth
-													: 0, maxY > 0 ? emptyBorderWidth : 0,
-									maxY > 0 ? emptyBorderWidth : 0));
-			titleLabel
-								.setForeground(maxY > 0 ? headingColor
-													: (headingColor != null ? headingColor.darker()
-																		: headingColor));
-			boolean hasData = guiComponentRowsForCurrentPage.size() > 0
-								|| guiComponentInvisibleRows.size() > 0;
+
+			rowPanel.setBorder(BorderFactory.createEmptyBorder(maxY > 0 ? emptyBorderWidth : 0,
+					maxY > 0 ? emptyBorderWidth : 0, maxY > 0 ? emptyBorderWidth : 0, maxY > 0 ? emptyBorderWidth : 0));
+			titleLabel.setForeground(
+					maxY > 0 ? headingColor : (headingColor != null ? headingColor.darker() : headingColor));
+			boolean hasData = guiComponentRowsForCurrentPage.size() > 0 || guiComponentInvisibleRows.size() > 0;
 			titleLabel.setText(hasData ? title : title); // + " (no data)");
 			titleLabel.validate();
-			
+
 			boolean firstColumn = true;
 			int row = 0;
 			ArrayList<GuiRow> workSet;
@@ -347,28 +330,31 @@ public class FolderPanel extends JComponent {
 				workSet = getSortedRows(guiComponentRowsForCurrentPage);
 			else
 				workSet = guiComponentRowsForCurrentPage;
-			
+
 			for (int y = 0; y < maxY; y++) {
-				if (workSet.get(y) != null && workSet.get(y).right != null &&
-									(workSet.get(y).right instanceof JScrollPane)) {
+				if (workSet.get(y) != null && workSet.get(y).right != null
+						&& (workSet.get(y).right instanceof JScrollPane)) {
 					size[1][y] = TableLayoutConstants.FILL;
 					// workSet.get(y).right.setBorder(BorderFactory.createLineBorder(Color.red));
 				} else
 					size[1][y] = TableLayoutConstants.PREFERRED;
 			}
-			
+
 			rowPanel.setLayout(new TableLayout(size));
-			for (GuiRow gr : workSet) {				
+			for (GuiRow gr : workSet) {
 				if (rowSpacing > 0 || colSpacing > 0) {
 					if (gr.span) {
-						rowPanel.add(getBorderedComponent(gr.left, 0, 0, gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0,
-											colSpacing), "0," + row + ", 1, " + row); // left orientation
-					} else {
-						rowPanel.add(getBorderedComponent(gr.left, 0, 0, gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0,
-											colSpacing), "0," + row + ", l"); // left orientation
 						rowPanel.add(
-											getBorderedComponent(gr.right, 0, 0, gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0, 0),
-											"1," + row);
+								getBorderedComponent(gr.left, 0, 0,
+										gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0, colSpacing),
+								"0," + row + ", 1, " + row); // left orientation
+					} else {
+						rowPanel.add(
+								getBorderedComponent(gr.left, 0, 0,
+										gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0, colSpacing),
+								"0," + row + ", l"); // left orientation
+						rowPanel.add(getBorderedComponent(gr.right, 0, 0,
+								gr != workSet.get(workSet.size() - 1) ? rowSpacing : 0, 0), "1," + row);
 					}
 				} else {
 					if (gr.span) {
@@ -379,10 +365,10 @@ public class FolderPanel extends JComponent {
 					}
 				}
 				row++;
-				
-				//scaling procedure
+
+				// scaling procedure
 				adjustGuiRowScaling(gr);
-				
+
 				colorRow(firstColumn, gr.left, gr.right);
 				firstColumn = !firstColumn;
 			}
@@ -394,23 +380,22 @@ public class FolderPanel extends JComponent {
 			else {
 				rowPanel.setOpaque(false);
 			}
-			
+
 			if (!ReleaseInfo.getIsAllowedFeature(FeatureSet.GravistoJavaHelp))
 				showHelpButton = false;
-			
-			if (showCondenseButton || showHelpButton || maxRowCount > 0
-								|| searchEnabled) {
+
+			if (showCondenseButton || showHelpButton || maxRowCount > 0 || searchEnabled) {
 				JComponent button1 = null, button2 = null;
 				JComponent titleComp = titleLabel;
 				if (searchEnabled) {
 					JComponent sfield = getSearchField();
-					titleComp = TableLayout.getSplit(titleLabel, sfield,
-										TableLayoutConstants.FILL, TableLayoutConstants.PREFERRED);
+					titleComp = TableLayout.getSplit(titleLabel, sfield, TableLayoutConstants.FILL,
+							TableLayoutConstants.PREFERRED);
 				}
 				if (maxRowCount > 0) {
 					JComponent lrb = getLeftRightButton();
-					titleComp = TableLayout.getSplit(titleComp, lrb,
-										TableLayoutConstants.FILL, TableLayoutConstants.PREFERRED);
+					titleComp = TableLayout.getSplit(titleComp, lrb, TableLayoutConstants.FILL,
+							TableLayoutConstants.PREFERRED);
 				}
 				if (showCondenseButton) {
 					final JComponent condenseCmdPanel = getCondenseButton();
@@ -425,42 +410,39 @@ public class FolderPanel extends JComponent {
 				JComponent labelPanel = titleComp;
 				if (button1 != null && button2 == null) {
 					if (condenseStyle == CondenseButtonLayout.RIGHT)
-						labelPanel = TableLayout.getSplit(titleComp, button1,
-											TableLayoutConstants.FILL, TableLayoutConstants.PREFERRED);
+						labelPanel = TableLayout.getSplit(titleComp, button1, TableLayoutConstants.FILL,
+								TableLayoutConstants.PREFERRED);
 					else
-						labelPanel = TableLayout.getSplit(button1, titleComp,
-											TableLayoutConstants.PREFERRED, TableLayoutConstants.FILL);
+						labelPanel = TableLayout.getSplit(button1, titleComp, TableLayoutConstants.PREFERRED,
+								TableLayoutConstants.FILL);
 				}
 				if (button2 != null && button1 == null)
-					labelPanel = TableLayout.getSplit(titleComp, button2,
-										TableLayoutConstants.FILL, TableLayoutConstants.PREFERRED);
+					labelPanel = TableLayout.getSplit(titleComp, button2, TableLayoutConstants.FILL,
+							TableLayoutConstants.PREFERRED);
 				if (button1 != null && button2 != null) {
 					if (condenseStyle == CondenseButtonLayout.RIGHT)
-						labelPanel = TableLayout.getSplit(titleComp, TableLayout
-											.getSplit(button2, button1, TableLayoutConstants.PREFERRED,
-																TableLayoutConstants.PREFERRED), TableLayoutConstants.FILL,
-											TableLayoutConstants.PREFERRED);
+						labelPanel = TableLayout.getSplit(titleComp,
+								TableLayout.getSplit(button2, button1, TableLayoutConstants.PREFERRED,
+										TableLayoutConstants.PREFERRED),
+								TableLayoutConstants.FILL, TableLayoutConstants.PREFERRED);
 					else
-						labelPanel = TableLayout.getSplit(button1, TableLayout
-											.getSplit(titleComp, button2, TableLayoutConstants.FILL,
-																TableLayout.PREFERRED),
-											TableLayout.PREFERRED, TableLayout.FILL);
+						labelPanel = TableLayout.getSplit(button1, TableLayout.getSplit(titleComp, button2,
+								TableLayoutConstants.FILL, TableLayout.PREFERRED), TableLayout.PREFERRED,
+								TableLayout.FILL);
 				}
-				setLayout(getVSplitLayout(labelPanel, rowPanel,
-									TableLayout.PREFERRED, TableLayout.FILL));
+				setLayout(getVSplitLayout(labelPanel, rowPanel, TableLayout.PREFERRED, TableLayout.FILL));
 				add(labelPanel, "1,1");
 			} else {
-				setLayout(getVSplitLayout(titleLabel, rowPanel,
-									TableLayout.PREFERRED, TableLayout.FILL));
+				setLayout(getVSplitLayout(titleLabel, rowPanel, TableLayout.PREFERRED, TableLayout.FILL));
 				add(titleLabel, "1,1");
 			}
 			add(rowPanel, "1,2");
 			revalidate();
-//			validate();
-//			rowPanel.validate();
+			// validate();
+			// rowPanel.validate();
 
 			repaint();
-			
+
 			if (!hideSearch && lastSearchText.length() > 0 && currentSearchInputField != null) {
 				SwingUtilities.invokeLater(new Runnable() {
 					public void run() {
@@ -470,7 +452,7 @@ public class FolderPanel extends JComponent {
 			}
 		}
 	}
-	
+
 	private ArrayList<GuiRow> getFilteredList(ArrayList<GuiRow> l1) {
 		activeSearchResult = -1;
 		if (searchFilter == null || !searchEnabled)
@@ -482,7 +464,7 @@ public class FolderPanel extends JComponent {
 		activeSearchResult = result.size();
 		return result;
 	}
-	
+
 	private void colorRow(boolean firstColumn, JComponent left, JComponent right) {
 		if (rowBackground0 == null || rowBackground1 == null)
 			return;
@@ -494,7 +476,7 @@ public class FolderPanel extends JComponent {
 			// left.setBorder(BorderFactory.createMatteBorder(0,2,0,0,rowBackground1));
 		}
 	}
-	
+
 	private void addTitleMouseClickHandler(final JComponent condenseCmdPanel) {
 		MouseListener ml[] = titleLabel.getMouseListeners();
 		titleLabel.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
@@ -511,22 +493,24 @@ public class FolderPanel extends JComponent {
 					}
 				}
 			}
-			
-			public void mousePressed(MouseEvent e) {}
-			
-			public void mouseReleased(MouseEvent e) {}
-			
+
+			public void mousePressed(MouseEvent e) {
+			}
+
+			public void mouseReleased(MouseEvent e) {
+			}
+
 			public void mouseEntered(MouseEvent e) {
 				// titleLabel.setBackground(frameColor.brighter());
 			}
-			
+
 			public void mouseExited(MouseEvent e) {
 				// titleLabel.setBackground(frameColor);
 			}
 		});
 	}
 
-	private ArrayList<GuiRow> getSortedRows(ArrayList<GuiRow> rows) {
+	private static ArrayList<GuiRow> getSortedRows(ArrayList<GuiRow> rows) {
 		GuiRow sorted[] = rows.toArray(new GuiRow[] {});
 		Arrays.sort(sorted, new Comparator<Object>() {
 			public int compare(Object o1, Object o2) {
@@ -552,7 +536,7 @@ public class FolderPanel extends JComponent {
 					label2 = StringManipulationTools.stringReplace(label2, "<br>", "");
 					label2 = StringManipulationTools.stringReplace(label2, "&nbsp;", "");
 				}
-				
+
 				return label1.compareTo(label2);
 			}
 		});
@@ -561,11 +545,11 @@ public class FolderPanel extends JComponent {
 			result.add(gr);
 		return result;
 	}
-	
+
 	public void setCondensedState(boolean condensed) {
 		this.condensedState = condensed;
 	}
-	
+
 	private void checkCondensedState() {
 		if (condensedState) {
 			guiComponentInvisibleRows.addAll(guiComponentRows);
@@ -575,7 +559,7 @@ public class FolderPanel extends JComponent {
 			guiComponentInvisibleRows.clear();
 		}
 	}
-	
+
 	private JComponent getCondenseButton() {
 		JToolBar tb = new JToolBar();
 		tb.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 0));
@@ -583,9 +567,8 @@ public class FolderPanel extends JComponent {
 		tb.setFloatable(false);
 		tb.setOpaque(true);
 		tb.setBackground(frameColor);
-		tb.setLayout(new TableLayout(new double[][] { { TableLayout.FILL },
-							{ TableLayout.FILL } }));
-		
+		tb.setLayout(new TableLayout(new double[][] { { TableLayout.FILL }, { TableLayout.FILL } }));
+
 		final JButton cmdButton = new JButton();
 		// result.setContentAreaFilled(false);
 		cmdButton.setBackground(frameColor);
@@ -606,7 +589,7 @@ public class FolderPanel extends JComponent {
 			cmdButton.setIcon(condensedIcon);
 		else
 			cmdButton.setIcon(uncondensedIcon);
-		
+
 		final AbstractButtonScaler scaler = new AbstractButtonScaler(Toolbox.getDPIScalingRatio());
 		cmdButton.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
@@ -615,7 +598,7 @@ public class FolderPanel extends JComponent {
 					cmdButton.setIcon(condensedIcon);
 				else
 					cmdButton.setIcon(uncondensedIcon);
-				showCondensed.put(title, new Boolean(condensedState));
+				showCondensed.put(title, Boolean.valueOf(condensedState));
 				layoutRows();
 				for (ActionListener al : collapse_listeners) {
 					al.actionPerformed(new ActionEvent(this, condensedState ? 1 : 0, "collapseevent"));
@@ -624,22 +607,22 @@ public class FolderPanel extends JComponent {
 		});
 		int s = 0;
 		cmdButton.setMargin(new Insets(s, s, s, s));
-		
-		//scaling relevant
+
+		// scaling relevant
 		if (Toolbox.getDPIScalingRatio() == 1f && !MainFrame.getInstance().isShowing())
-			/*do nothing*/;
+			/* do nothing */;
 		else {
 			final Color titleColor = new Color(184, 207, 229);
-			scaler.coscaleIcon(cmdButton);				
+			scaler.coscaleIcon(cmdButton);
 			cmdButton.setBackground(titleColor);
 			titleLabel.setBackground(titleColor);
 		}
-		
+
 		tb.add(cmdButton, "0,0");
 		tb.validate();
 		return tb;
 	}
-	
+
 	private JComponent getSearchField() {
 		JToolBar tb = new JToolBar();
 		tb.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 0));
@@ -647,10 +630,9 @@ public class FolderPanel extends JComponent {
 		tb.setFloatable(false);
 		tb.setOpaque(false);
 		tb.setBackground(frameColor);
-		tb.setLayout(new TableLayout(new double[][] {
-							{ TableLayout.PREFERRED, TableLayout.PREFERRED, 40 },
-							{ TableLayout.FILL } }));
-		
+		tb.setLayout(new TableLayout(
+				new double[][] { { TableLayout.PREFERRED, TableLayout.PREFERRED, 40 }, { TableLayout.FILL } }));
+
 		final JButton cmdButtonS = new JButton();
 		cmdButtonS.setToolTipText(getSearchHintText());
 		final JTextField input = new JTextField();
@@ -658,18 +640,17 @@ public class FolderPanel extends JComponent {
 			input.setVisible(false);
 		currentSearchInputField = input;
 		input.setToolTipText(getSearchHintText());
-		input.setBorder(BorderFactory.createEtchedBorder(Color.WHITE,
-							Color.LIGHT_GRAY));
+		input.setBorder(BorderFactory.createEtchedBorder(Color.WHITE, Color.LIGHT_GRAY));
 		input.setBackground(frameColor);
 		input.setOpaque(true);
 		input.setText(lastSearchText);
 		input.addKeyListener(new KeyListener() {
 			public void keyPressed(KeyEvent arg0) {
 			}
-			
+
 			public void keyReleased(KeyEvent arg0) {
 			}
-			
+
 			public void keyTyped(KeyEvent arg0) {
 				SwingUtilities.invokeLater(new Runnable() {
 					public void run() {
@@ -677,8 +658,7 @@ public class FolderPanel extends JComponent {
 						currentPage = 0;
 						layoutRows();
 						for (ActionListener al : collapse_listeners) {
-							al.actionPerformed(new ActionEvent(this,
-												condensedState ? 0 : 1, "collapseevent"));
+							al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
 						}
 					}
 				});
@@ -690,7 +670,7 @@ public class FolderPanel extends JComponent {
 				input.setBackground(Color.white);
 				input.repaint();
 			}
-			
+
 			public void focusLost(FocusEvent e) {
 				input.setOpaque(true);
 				input.setBackground(frameColor);
@@ -698,28 +678,26 @@ public class FolderPanel extends JComponent {
 				input.repaint();
 			}
 		});
-		
+
 		// layoutRows();
 		// for (ActionListener al : collapse_listeners) {
 		// al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1,
 		// "collapseevent"));
 		// }
-		
+
 		cmdButtonS.setBackground(frameColor);
 		cmdButtonS.setOpaque(true);
 		cmdButtonS.setBorderPainted(false);
 		cmdButtonS.setRolloverEnabled(true);
-		
+
 		JLabel searchResLabel = new JLabel();
 		searchResLabel.setOpaque(true);
 		searchResLabel.setBackground(frameColor);
 		if (activeSearchResult > 0) {
-			if (activeSearchResult < guiComponentRows.size()
-								+ guiComponentInvisibleRows.size())
-				searchResLabel.setText("<html><font color='gray'><small>"
-									+ activeSearchResult + "&nbsp;");
+			if (activeSearchResult < guiComponentRows.size() + guiComponentInvisibleRows.size())
+				searchResLabel.setText("<html><font color='gray'><small>" + activeSearchResult + "&nbsp;");
 		}
-		
+
 		// result.setOpaque(false);
 		ImageIcon searchIcon = getSearchIcon();
 		cmdButtonS.setIcon(searchIcon);
@@ -734,19 +712,18 @@ public class FolderPanel extends JComponent {
 		tb.validate();
 		return tb;
 	}
-	
-	private String getSearchHintText() {
+
+	private static String getSearchHintText() {
 		return "Enter text into the search field to filter the list content";
 	}
-	
+
 	public static ImageIcon getSearchIcon() {
 		ClassLoader cl = FolderPanel.class.getClassLoader();
-		String path = FolderPanel.class.getPackage().getName()
-							.replace('.', '/') + "/images";
+		String path = FolderPanel.class.getPackage().getName().replace('.', '/') + "/images";
 		ImageIcon searchIcon = new ImageIcon(cl.getResource(path + "/lupe.png"));
 		return searchIcon;
 	}
-	
+
 	private JComponent getLeftRightButton() {
 		JToolBar tb = new JToolBar();
 		tb.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 0));
@@ -754,41 +731,38 @@ public class FolderPanel extends JComponent {
 		tb.setFloatable(false);
 		tb.setOpaque(true);
 		tb.setBackground(frameColor);
-		tb.setLayout(new TableLayout(new double[][] {
-							{ TableLayout.PREFERRED, TableLayout.PREFERRED,
-												TableLayout.PREFERRED, TableLayout.PREFERRED,
-												TableLayout.PREFERRED }, { TableLayout.FILL } }));
-		
+		tb.setLayout(new TableLayout(new double[][] { { TableLayout.PREFERRED, TableLayout.PREFERRED,
+				TableLayout.PREFERRED, TableLayout.PREFERRED, TableLayout.PREFERRED }, { TableLayout.FILL } }));
+
 		final JButton cmdButtonReduceMaximumRowCount = new JButton(); // less rows
 		final JButton cmdButtonIncreaseMaximumRowCount = new JButton(); // more rows
-		
+
 		final JButton cmdButton1 = new JButton();
 		final JButton cmdButton2 = new JButton();
-		
+
 		int gcs = guiComponentRows.size();
 		if (condensedState)
 			gcs = guiComponentInvisibleRows.size();
 		if (searchEnabled && activeSearchResult >= 0)
 			gcs = activeSearchResult;
-		
+
 		int pages = gcs / maxRowCount;
 		if (gcs % maxRowCount > 0)
 			pages++;
-		
+
 		cmdButtonReduceMaximumRowCount.setEnabled(maxRowCount > 1 && gcs > 0);
 		cmdButtonIncreaseMaximumRowCount.setEnabled(gcs > 0);
-		
+
 		cmdButton1.setEnabled(currentPage > 0);
 		cmdButton2.setEnabled(currentPage + 1 < pages);
-		
+
 		cmdButtonReduceMaximumRowCount.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				maxRowCount--;
 				currentPage = 0;
 				layoutRows();
 				for (ActionListener al : collapse_listeners) {
-					al.actionPerformed(new ActionEvent(this, condensedState ? 0
-										: 1, "collapseevent"));
+					al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
 				}
 			}
 		});
@@ -798,19 +772,17 @@ public class FolderPanel extends JComponent {
 				currentPage = 0;
 				layoutRows();
 				for (ActionListener al : collapse_listeners) {
-					al.actionPerformed(new ActionEvent(this, condensedState ? 0
-										: 1, "collapseevent"));
+					al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
 				}
 			}
 		});
-		
+
 		cmdButton1.addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				currentPage--;
 				layoutRows();
 				for (ActionListener al : collapse_listeners) {
-					al.actionPerformed(new ActionEvent(this, condensedState ? 0
-										: 1, "collapseevent"));
+					al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
 				}
 			}
 		});
@@ -819,66 +791,55 @@ public class FolderPanel extends JComponent {
 				currentPage++;
 				layoutRows();
 				for (ActionListener al : collapse_listeners) {
-					al.actionPerformed(new ActionEvent(this, condensedState ? 0
-										: 1, "collapseevent"));
+					al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
 				}
 			}
 		});
-		
+
 		cmdButtonReduceMaximumRowCount.setBackground(frameColor);
 		cmdButtonReduceMaximumRowCount.setBorderPainted(false);
 		cmdButtonReduceMaximumRowCount.setRolloverEnabled(true);
 		cmdButtonReduceMaximumRowCount.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-		
+
 		cmdButtonIncreaseMaximumRowCount.setBackground(frameColor);
 		cmdButtonIncreaseMaximumRowCount.setBorderPainted(false);
 		cmdButtonIncreaseMaximumRowCount.setRolloverEnabled(true);
 		cmdButtonIncreaseMaximumRowCount.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-		
+
 		cmdButton1.setBackground(frameColor);
 		cmdButton1.setBorderPainted(false);
 		cmdButton1.setRolloverEnabled(true);
 		cmdButton1.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-		
+
 		cmdButton2.setBackground(frameColor);
 		cmdButton2.setBorderPainted(false);
 		cmdButton2.setRolloverEnabled(true);
 		cmdButton2.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-		
+
 		cmdButtonReduceMaximumRowCount.setToolTipText("reduce row count");
 		cmdButtonIncreaseMaximumRowCount.setToolTipText("increase row count");
 		cmdButton1.setToolTipText("turn page");
 		cmdButton2.setToolTipText("turn page");
-		
+
 		// result.setOpaque(false);
 		ClassLoader cl = FolderPanel.class.getClassLoader();
 		String path = FolderPanel.class.getPackage().getName().replace('.', '/') + "/images";
 		ImageIcon leftIcon = null;
 		ImageIcon rightIcon = null;
-		ImageIcon lessIcon = new ImageIcon(cl
-							.getResource(path + "/bw_fold.png"));
-		ImageIcon moreIcon = new ImageIcon(cl.getResource(path
-							+ "/bw_unfold.png"));
-		
+		ImageIcon lessIcon = new ImageIcon(cl.getResource(path + "/bw_fold.png"));
+		ImageIcon moreIcon = new ImageIcon(cl.getResource(path + "/bw_unfold.png"));
+
 		if (bigIcons == Iconsize.LARGE) {
-			leftIcon = new ImageIcon(cl
-								.getResource(path + "/large_left.png"));
-			rightIcon = new ImageIcon(cl.getResource(path
-								+ "/large_right.png"));
-		} else
-			if (bigIcons == Iconsize.MIDDLE) {
-				leftIcon = new ImageIcon(cl
-									.getResource(path + "/middle_left.png"));
-				rightIcon = new ImageIcon(cl.getResource(path
-									+ "/middle_right.png"));
-			} else
-				if (bigIcons == Iconsize.SMALL) {
-					leftIcon = new ImageIcon(cl
-										.getResource(path + "/bw_left.png"));
-					rightIcon = new ImageIcon(cl.getResource(path
-										+ "/bw_right.png"));
-				}
-		
+			leftIcon = new ImageIcon(cl.getResource(path + "/large_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/large_right.png"));
+		} else if (bigIcons == Iconsize.MIDDLE) {
+			leftIcon = new ImageIcon(cl.getResource(path + "/middle_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/middle_right.png"));
+		} else if (bigIcons == Iconsize.SMALL) {
+			leftIcon = new ImageIcon(cl.getResource(path + "/bw_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/bw_right.png"));
+		}
+
 		cmdButton1.setIcon(leftIcon);
 		cmdButton2.setIcon(rightIcon);
 		cmdButtonReduceMaximumRowCount.setIcon(lessIcon);
@@ -888,13 +849,12 @@ public class FolderPanel extends JComponent {
 		cmdButton2.setMargin(new Insets(s, s, s, s));
 		cmdButtonReduceMaximumRowCount.setMargin(new Insets(s, s, s, s));
 		cmdButtonIncreaseMaximumRowCount.setMargin(new Insets(s, s, s, s));
-		String pt = "<html><font color='gray'><small>" + (currentPage + 1)
-							+ "/" + (pages);
+		String pt = "<html><font color='gray'><small>" + (currentPage + 1) + "/" + (pages);
 		if (((currentPage + 1) + "/" + (pages)).equals("1/0"))
 			pt = "";
 		JLabel pageLabel = new JLabel(pt);
 		pageLabel.setBackground(frameColor);
-		pageLabel.setOpaque(true);		
+		pageLabel.setOpaque(true);
 		if (!lockRowCount) {
 			tb.add(cmdButtonReduceMaximumRowCount, "0,0");
 			tb.add(cmdButtonIncreaseMaximumRowCount, "1,0");
@@ -905,46 +865,36 @@ public class FolderPanel extends JComponent {
 		tb.validate();
 		return tb;
 	}
-	
+
 	public static ImageIcon getLeftRightIcon(Iconsize bigIcons, boolean left) {
 		ClassLoader cl = FolderPanel.class.getClassLoader();
 		String path = FolderPanel.class.getPackage().getName().replace('.', '/') + "/images";
 		ImageIcon leftIcon = null;
 		ImageIcon rightIcon = null;
-		
+
 		if (bigIcons == Iconsize.LARGE) {
-			leftIcon = new ImageIcon(cl
-								.getResource(path + "/large_left.png"));
-			rightIcon = new ImageIcon(cl.getResource(path
-								+ "/large_right.png"));
-		} else
-			if (bigIcons == Iconsize.MIDDLE) {
-				leftIcon = new ImageIcon(cl
-									.getResource(path + "/middle_left.png"));
-				rightIcon = new ImageIcon(cl.getResource(path
-									+ "/middle_right.png"));
-			} else
-				if (bigIcons == Iconsize.SMALL) {
-					leftIcon = new ImageIcon(cl
-										.getResource(path + "/bw_left.png"));
-					rightIcon = new ImageIcon(cl.getResource(path
-										+ "/bw_right.png"));
-				}
+			leftIcon = new ImageIcon(cl.getResource(path + "/large_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/large_right.png"));
+		} else if (bigIcons == Iconsize.MIDDLE) {
+			leftIcon = new ImageIcon(cl.getResource(path + "/middle_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/middle_right.png"));
+		} else if (bigIcons == Iconsize.SMALL) {
+			leftIcon = new ImageIcon(cl.getResource(path + "/bw_left.png"));
+			rightIcon = new ImageIcon(cl.getResource(path + "/bw_right.png"));
+		}
 		if (left)
 			return leftIcon;
 		else
 			return rightIcon;
 	}
-	
-	public static JComponent getHelpButton(ActionListener helpActionListener,
-						Color frameColor) {
+
+	public static JComponent getHelpButton(ActionListener helpActionListener, Color frameColor) {
 		JToolBar tb = new JToolBar();
 		tb.setBorder(BorderFactory.createEmptyBorder(0, 0, 0, 0));
 		tb.setFloatable(false);
 		tb.setOpaque(false);
 		tb.setBackground(frameColor);
-		tb.setLayout(new TableLayout(new double[][] { { TableLayoutConstants.FILL },
-							{ TableLayoutConstants.FILL } }));
+		tb.setLayout(new TableLayout(new double[][] { { TableLayoutConstants.FILL }, { TableLayoutConstants.FILL } }));
 		// tb.setBackground(frameColor);
 		final JButton result = new JButton();
 		result.setBackground(frameColor);
@@ -952,9 +902,8 @@ public class FolderPanel extends JComponent {
 		result.setRolloverEnabled(true);
 		result.setOpaque(frameColor != null);
 		ClassLoader cl = FolderPanel.class.getClassLoader();
-		String path = FolderPanel.class.getPackage().getName()
-							.replace('.', '/') + "/images";
-		
+		String path = FolderPanel.class.getPackage().getName().replace('.', '/') + "/images";
+
 		result.setIcon(new ImageIcon(cl.getResource(path + "/help2.png")));
 		result.addActionListener(helpActionListener);
 		/*
@@ -972,83 +921,75 @@ public class FolderPanel extends JComponent {
 		tb.repaint();
 		return tb;
 	}
-	
+
 	private JComponent getHelpButton() {
 		return getHelpButton(helpActionListener, frameColor);
 	}
-	
+
 	public int getRowCount() {
 		return guiComponentRows.size() + guiComponentInvisibleRows.size();
 	}
-	
+
 	public ArrayList<GuiRow> getVisibleGuiRows() {
 		return guiComponentRows;
 	}
-	
+
 	public ArrayList<GuiRow> getAllGuiRows() {
 		ArrayList<GuiRow> result = new ArrayList<GuiRow>();
 		result.addAll(guiComponentRows);
 		result.addAll(guiComponentInvisibleRows);
 		return result;
 	}
-	
-	public JComponent getBorderedComponent(int top, int left, int bottom,
-						int right) {
-		JComponent result = TableLayout.getSplitVertical(this, null,
-							TableLayout.PREFERRED, 0);
-		result.setBorder(BorderFactory.createEmptyBorder(top, left, bottom,
-							right));
+
+	public JComponent getBorderedComponent(int top, int left, int bottom, int right) {
+		JComponent result = TableLayout.getSplitVertical(this, null, TableLayout.PREFERRED, 0);
+		result.setBorder(BorderFactory.createEmptyBorder(top, left, bottom, right));
 		return result;
 	}
-	
-	public static JComponent getBorderedComponent(JComponent comp, int top,
-						int left, int bottom, int right) {
+
+	public static JComponent getBorderedComponent(JComponent comp, int top, int left, int bottom, int right) {
 		if (comp == null)
 			return null;
-		JComponent result = TableLayout.getSplitVertical(comp, null,
-							TableLayoutConstants.PREFERRED, 0);
-		result.setBorder(BorderFactory.createEmptyBorder(top, left, bottom,
-							right));
+		JComponent result = TableLayout.getSplitVertical(comp, null, TableLayoutConstants.PREFERRED, 0);
+		result.setBorder(BorderFactory.createEmptyBorder(top, left, bottom, right));
 		result.setBackground(null);
 		return result;
 	}
-	
+
 	public void addCollapseListener(ActionListener listener) {
 		collapse_listeners.add(listener);
 	}
-	
-	public GuiRow addGuiComponentRow(JComponent left, JComponent right,
-						boolean updateLayout, int spaceAroundElements) {
+
+	public GuiRow addGuiComponentRow(JComponent left, JComponent right, boolean updateLayout, int spaceAroundElements) {
 		int sp = spaceAroundElements;
 		GuiRow gr = null;
 		if (spaceAroundElements == 0)
 			gr = addGuiComponentRow(left, right, updateLayout);
 		else
 			gr = addGuiComponentRow(getBorderedComponent(left, sp, sp, sp, sp),
-								getBorderedComponent(right, sp, sp, sp, sp), updateLayout);
+					getBorderedComponent(right, sp, sp, sp, sp), updateLayout);
 		if (right != null && right instanceof JButton)
 			((JButton) right).setOpaque(false);
 		return gr;
 	}
-	
+
 	public void addComp(JComponent component, int border) {
 		if (border == 0)
 			addComp(component);
 		else
-			addComp(getBorderedComponent(component, border, border, border,
-								border));
+			addComp(getBorderedComponent(component, border, border, border, border));
 	}
-	
+
 	public void addComp(JComponent comp) {
 		addGuiComponentRow(null, comp, false);
 	}
-	
+
 	public void setTitle(String newTitle) {
 		titleLabel.setText(newTitle);
 		titleLabel.repaint();
 		this.title = newTitle;
 	}
-	
+
 	public void addCollapseListenerDialogSizeUpdate() {
 		final FolderPanel fp = this;
 		ActionListener resizeListener = new ActionListener() {
@@ -1063,7 +1004,7 @@ public class FolderPanel extends JComponent {
 		};
 		addCollapseListener(resizeListener);
 	}
-	
+
 	public void dialogSizeUpdate() {
 		final FolderPanel fp = this;
 		try {
@@ -1080,11 +1021,10 @@ public class FolderPanel extends JComponent {
 			ErrorMsg.addErrorMessage(e);
 		}
 	}
-	
+
 	public static void performDialogResize(Component startComponent) {
 		Component pc = startComponent;
-		while (!((pc instanceof JDialog) || (pc instanceof JFrame))
-							&& pc != null) {
+		while (!((pc instanceof JDialog) || (pc instanceof JFrame)) && pc != null) {
 			// System.out.println(pc.getClass().getCanonicalName());
 			pc = pc.getParent();
 		}
@@ -1100,11 +1040,10 @@ public class FolderPanel extends JComponent {
 			jf.repaint();
 		}
 	}
-	
+
 	public static void closeParentDialog(Component startComponent) {
 		Component pc = startComponent;
-		while (!((pc instanceof JDialog) || (pc instanceof JFrame))
-							&& pc != null) {
+		while (!((pc instanceof JDialog) || (pc instanceof JFrame)) && pc != null) {
 			pc = pc.getParent();
 		}
 		if (pc != null && pc instanceof JDialog) {
@@ -1118,32 +1057,32 @@ public class FolderPanel extends JComponent {
 			jf.dispose();
 		}
 	}
-	
+
 	public void setMaximumRowCount(int maxRowCount) {
 		setMaximumRowCount(maxRowCount, false);
 	}
-	
+
 	public void setMaximumRowCount(int maxRowCount, boolean locked) {
 		this.maxRowCount = maxRowCount;
 		this.lockRowCount = locked;
 	}
-	
+
 	public void setRowBackground0(Color col0) {
 		rowBackground0 = col0;
 	}
-	
+
 	public void setRowBackground1(Color col1) {
 		rowBackground1 = col1;
 	}
-	
+
 	public void addSearchFilter(SearchFilter filter) {
 		this.searchFilter = filter;
 	}
-	
+
 	public void addDefaultTextSearchFilter() {
 		addDefaultTextSearchFilterFixed(null);
 	}
-	
+
 	public void addDefaultTextSearchFilterFixed(final String optFixedSearch) {
 		if (optFixedSearch != null) {
 			lastSearchText = optFixedSearch;
@@ -1151,11 +1090,11 @@ public class FolderPanel extends JComponent {
 		}
 		addSearchFilter(getDefaultSearchFilter(optFixedSearch));
 	}
-	
+
 	public String getTitle() {
 		return title;
 	}
-	
+
 	public void mergeRowsWithSameLeftLabel() {
 		HashMap<String, ArrayList<GuiRow>> descAndGuiRows = new HashMap<String, ArrayList<GuiRow>>();
 		for (GuiRow gr : guiComponentRows) {
@@ -1200,19 +1139,19 @@ public class FolderPanel extends JComponent {
 		for (GuiRow gr : toBeAdded)
 			addGuiComponentRow(gr, false);
 	}
-	
+
 	public enum Iconsize {
 		SMALL, MIDDLE, LARGE
 	}
-	
+
 	public void setShowCondenseButton(boolean b) {
 		showCondenseButton = b;
 	}
-	
+
 	public int getFixedSearchFilterMatchCount() {
 		return getFilteredList(guiComponentRows).size();
 	}
-	
+
 	public static SearchFilter getDefaultSearchFilter(final String optFixedSearch) {
 		return new SearchFilter() {
 			public boolean accept(GuiRow gr, String searchText) {
@@ -1228,48 +1167,42 @@ public class FolderPanel extends JComponent {
 				if (left != null && left instanceof AbstractButton) {
 					AbstractButton jb = (AbstractButton) left;
 					c1 = jb.getText().toUpperCase();
-				} else
-					if (left != null && left instanceof JLabel) {
-						JLabel jb = (JLabel) left;
-						c1 = jb.getText().toUpperCase();
-					} else
-						if (left != null && left instanceof JComponent) {
-							StringBuilder sb = new StringBuilder();
-							getSubText(left, sb);
-							c1 = sb.toString().toUpperCase();
-						}
+				} else if (left != null && left instanceof JLabel) {
+					JLabel jb = (JLabel) left;
+					c1 = jb.getText().toUpperCase();
+				} else if (left != null && left instanceof JComponent) {
+					StringBuilder sb = new StringBuilder();
+					getSubText(left, sb);
+					c1 = sb.toString().toUpperCase();
+				}
 				if (right != null && right instanceof AbstractButton) {
 					AbstractButton jb = (AbstractButton) right;
 					c2 = jb.getText().toUpperCase();
-				} else
-					if (right != null && right instanceof JLabel) {
-						JLabel jb = (JLabel) right;
-						c2 = jb.getText().toUpperCase();
-					} else
-						if (right != null && right instanceof JComponent) {
-							StringBuilder sb = new StringBuilder();
-							getSubText(right, sb);
-							c2 = sb.toString().toUpperCase();
-						}
+				} else if (right != null && right instanceof JLabel) {
+					JLabel jb = (JLabel) right;
+					c2 = jb.getText().toUpperCase();
+				} else if (right != null && right instanceof JComponent) {
+					StringBuilder sb = new StringBuilder();
+					getSubText(right, sb);
+					c2 = sb.toString().toUpperCase();
+				}
 				if (c1.length() <= 0 && c2.length() <= 0)
 					return true;
 				return c2.contains(searchText) || c1.contains(searchText);
 			}
-			
+
 			private void getSubText(JComponent c, StringBuilder sb) {
 				for (Component jc : c.getComponents()) {
 					if (jc instanceof JLabel)
 						sb.append("/" + ((JLabel) jc).getText());
-					else
-						if (jc instanceof JButton)
-							sb.append("/" + ((JButton) jc).getText());
-						else
-							if (jc instanceof JComponent)
-								getSubText((JComponent) jc, sb);
-					
+					else if (jc instanceof JButton)
+						sb.append("/" + ((JButton) jc).getText());
+					else if (jc instanceof JComponent)
+						getSubText((JComponent) jc, sb);
+
 				}
 			}
-			
+
 			private JComponent findMyComponent(JComponent jc) {
 				if (jc instanceof JPanel) {
 					JPanel jp = (JPanel) jc;
@@ -1279,7 +1212,7 @@ public class FolderPanel extends JComponent {
 			}
 		};
 	}
-	
+
 	public static ImageIcon getLeftOrRightIcon(boolean left) {
 		ClassLoader cl = FolderPanel.class.getClassLoader();
 		String path = FolderPanel.class.getPackage().getName().replace('.', '/') + "/images";
@@ -1288,63 +1221,62 @@ public class FolderPanel extends JComponent {
 		else
 			return new ImageIcon(cl.getResource(path + "/large_right.png"));
 	}
-	
+
 	public int getMaxRowCount() {
 		return this.maxRowCount;
 	}
-	
+
 	public int getCurrentPage() {
 		return this.currentPage;
 	}
-	
+
 	public void setCurrentPage(int page) {
 		// page valid?
-		int maxPage = this.guiComponentRows.size() / this.maxRowCount - ((this.guiComponentRows.size() % this.maxRowCount == 0) ? 1 : 0);
+		int maxPage = this.guiComponentRows.size() / this.maxRowCount
+				- ((this.guiComponentRows.size() % this.maxRowCount == 0) ? 1 : 0);
 		if (maxPage < page)
 			// page too big
 			page = maxPage;
-		
+
 		if (page < 0 || this.currentPage == page)
 			// invalid or redundant
 			return;
-		
+
 		// set it!
 		this.currentPage = page;
 		this.layoutRows();
-		
+
 		for (ActionListener al : collapse_listeners)
 			al.actionPerformed(new ActionEvent(this, condensedState ? 0 : 1, "collapseevent"));
-		
+
 		// all OK!
 	}
-	
+
 	transient float dpi;
 	transient boolean resize = false;
+
 	/**
-	 * Because when condensed, the JComponents representing
-	 * the {@linkplain GuiRow}s are actually removed from the
-	 * Component tree and thus not scaled. So we have to scale
-	 * them again on a new layout. 
+	 * Because when condensed, the JComponents representing the {@linkplain GuiRow}s
+	 * are actually removed from the Component tree and thus not scaled. So we have
+	 * to scale them again on a new layout.
 	 */
 	private void adjustGuiRowScaling(GuiRow gr) {
-		//scale re-added Components only post mainFrame init && a scaling change
-		if (MainFrame.getInstance().isShowing() &&
-				(initialDPIvalue != (dpi = DPIHelper.processEmulatedDPIValue(
-						DPIHelper.managePreferences(DPIHelper.VALUE_DEFAULT,
-								DPIHelper.PREFERENCES_GET)))
+		// scale re-added Components only post mainFrame init && a scaling change
+		if (MainFrame.getInstance().isShowing() && (initialDPIvalue != (dpi = DPIHelper.processEmulatedDPIValue(
+				DPIHelper.managePreferences(DPIHelper.VALUE_DEFAULT, DPIHelper.PREFERENCES_GET)))
 				|| newInitial != initialDPIvalue || resize)) {
-			
-			//check for new initial DPI value
+
+			// check for new initial DPI value
 			if (ComponentRegulator.isModifiedPoolRefilled()) {
 				newInitial = (newCurrent == -1f) ? dpi : newCurrent;
 				newCurrent = dpi;
 			}
-			//we have to differentiate, since not always sync-up
+			// we have to differentiate, since not always sync-up
 			scaleComponent(gr.left);
 			scaleComponent(gr.right);
 		}
 	}
-	
+
 	/**
 	 * Worker method for {@linkplain FolderPanel#adjustGuiRowScaling(GuiRow)}.
 	 * 
@@ -1353,25 +1285,26 @@ public class FolderPanel extends JComponent {
 	private void scaleComponent(JComponent column) {
 		if (Toolbox.isComponentScaled(column))
 			return;
-		
-		//get the respective set initialDPIvalue
+
+		// get the respective set initialDPIvalue
 		float initialValue = setInitialDPIValue(column);
 		if (initialValue != ScalingSlider.getStandard()) {
-			//scale back to 1.0 to fix the mismatch between old & new DPI
+			// scale back to 1.0 to fix the mismatch between old & new DPI
 			Toolbox.resetScalingOf(column, initialValue);
 		}
 
 		Toolbox.scaleComponent(column, Toolbox.getDPIScalingRatio(), true);
 		ComponentRegulator.addScaledComponent(column);
 	}
-	
+
 	/**
-	 * Because there could be components with multiple initial DPI value,
-	 * when there have been multiple scalings done and only some components
-	 * have been adjusted. 
-	 * @param component whose initialDPIvalue will be set or returned
-	 * @return initialDPIValue or current, if no scaling change. Otherwise
-	 * the new initial DPI value.
+	 * Because there could be components with multiple initial DPI value, when there
+	 * have been multiple scalings done and only some components have been adjusted.
+	 * 
+	 * @param component
+	 *            whose initialDPIvalue will be set or returned
+	 * @return initialDPIValue or current, if no scaling change. Otherwise the new
+	 *         initial DPI value.
 	 */
 	private float setInitialDPIValue(JComponent component) {
 		if (!baseDPIValues.containsKey(component.hashCode())) {
@@ -1383,29 +1316,28 @@ public class FolderPanel extends JComponent {
 				baseDPIValues.put(component.hashCode(), newInitial);
 				return newInitial;
 			}
-			
+
 			return oldValue;
 		}
 	}
-	
+
 	private void addScalingListener() {
 		PropertyChangeListener sListener = new PropertyChangeListener() {
-			
+
 			@Override
-			public void propertyChange(PropertyChangeEvent evt) {		
+			public void propertyChange(PropertyChangeEvent evt) {
 				String v = evt.getNewValue().toString();
 				if (v.equals(Toolbox.STATE_ON_SLIDER) || v.equals(Toolbox.STATE_RESCALED)) {
 					resize = true;
 					layoutRows();
 					resize = false;
 				}
-				
-				if (evt.getOldValue().toString().equals(Toolbox.STATE_ON_START)
-						&& v.equals(Toolbox.STATE_IDLE))
+
+				if (evt.getOldValue().toString().equals(Toolbox.STATE_ON_START) && v.equals(Toolbox.STATE_IDLE))
 					layoutRows();
 			}
 		};
-		
+
 		Toolbox.addScalingListener(sListener);
 	}
 }
