@@ -16,67 +16,66 @@ import org.graffiti.event.AttributeEvent;
  * 
  * @version $Revision: 1.6 $
  */
-public class DoubleAttribute
-					extends AbstractAttribute {
+public class DoubleAttribute extends AbstractAttribute {
 	// ~ Instance fields ========================================================
-	
+
 	/** The value of this attribute */
 	public double value;
-	
+
 	// ~ Constructors ===========================================================
-	
+
 	/**
 	 * Constructs a new instance of a <code>DoubleAttribute</code>.
 	 * 
 	 * @param id
-	 *           the id of the attribute
+	 *            the id of the attribute
 	 */
 	public DoubleAttribute(String id) {
 		super(id);
 	}
-	
+
 	/**
-	 * Constructs a new instance of a <code>DoubleAttribute</code> with the
-	 * given value.
+	 * Constructs a new instance of a <code>DoubleAttribute</code> with the given
+	 * value.
 	 * 
 	 * @param id
-	 *           the id of the attribute.
+	 *            the id of the attribute.
 	 * @param value
-	 *           the value of the attribute.
+	 *            the value of the attribute.
 	 */
 	public DoubleAttribute(String id, double value) {
 		super(id);
 		this.value = value;
 	}
-	
+
 	/**
-	 * Constructs a new instance of a <code>DoubleAttribute</code> with the
-	 * given value.
+	 * Constructs a new instance of a <code>DoubleAttribute</code> with the given
+	 * value.
 	 * 
 	 * @param id
-	 *           the id of the attribute.
+	 *            the id of the attribute.
 	 * @param value
-	 *           the value of the attribute.
+	 *            the value of the attribute.
 	 */
 	public DoubleAttribute(String id, Double value) {
 		super(id);
 		this.value = value.doubleValue();
 	}
-	
+
 	// ~ Methods ================================================================
-	
+
 	/**
 	 * @see org.graffiti.attributes.Attribute#setDefaultValue()
 	 */
 	public void setDefaultValue() {
 		value = 0.0;
 	}
-	
+
 	/**
 	 * Set the value of this Object.
 	 * 
 	 * @param value
-	 *           the new value for this object.
+	 *            the new value for this object.
 	 */
 	public void setDouble(double value) {
 		AttributeEvent ae = new AttributeEvent(this);
@@ -84,7 +83,7 @@ public class DoubleAttribute
 		this.value = value;
 		callPostAttributeChanged(ae);
 	}
-	
+
 	/**
 	 * Returns the value of this attribute wrapped in an <code>Double</code> object.
 	 * 
@@ -93,16 +92,16 @@ public class DoubleAttribute
 	public double getDouble() {
 		return value;
 	}
-	
+
 	/**
 	 * Returns the value of the attribute.
 	 * 
 	 * @return the value of the attribute.
 	 */
 	public Object getValue() {
-		return new Double(value);
+		return Double.valueOf(value);
 	}
-	
+
 	/**
 	 * Returns a deep copy of this instance.
 	 * 
@@ -111,29 +110,28 @@ public class DoubleAttribute
 	public Object copy() {
 		return new DoubleAttribute(this.getId(), this.value);
 	}
-	
+
 	/**
-	 * Sets the value of the attribute. The <code>ListenerManager</code> is
-	 * informed by the method <code>setValue()</code>.
+	 * Sets the value of the attribute. The <code>ListenerManager</code> is informed
+	 * by the method <code>setValue()</code>.
 	 * 
 	 * @param o
-	 *           the new value of the attribute.
+	 *            the new value of the attribute.
 	 * @exception IllegalArgumentException
-	 *               if the parameter has not the
-	 *               appropriate class for this attribute.
+	 *                if the parameter has not the appropriate class for this
+	 *                attribute.
 	 */
 	@Override
-	protected void doSetValue(Object o)
-						throws IllegalArgumentException {
+	protected void doSetValue(Object o) throws IllegalArgumentException {
 		assert o != null;
-		
+
 		try {
 			value = ((Double) o).doubleValue();
 		} catch (ClassCastException cce) {
 			throw new IllegalArgumentException("Invalid value type.");
 		}
 	}
-	
+
 	/**
 	 * @see org.graffiti.plugin.Displayable#toXMLString()
 	 */
