@@ -43,24 +43,24 @@ import org.graffiti.selection.Selection;
  */
 public class CopyAction extends SelectionAction {
 	// ~ Constructors ===========================================================
-	
+
 	/**
 	 * Comment for <code>serialVersionUID</code>
 	 */
 	private static final long serialVersionUID = 1L;
-	
+
 	/**
 	 * Constructs a new copy action.
 	 * 
 	 * @param mainFrame
-	 *           DOCUMENT ME!
+	 *            DOCUMENT ME!
 	 */
 	public CopyAction(MainFrame mainFrame) {
 		super("edit.copy", mainFrame);
 	}
-	
+
 	// ~ Methods ================================================================
-	
+
 	/**
 	 * Returns the help context for the action.
 	 * 
@@ -70,46 +70,46 @@ public class CopyAction extends SelectionAction {
 	public HelpContext getHelpContext() {
 		return null; // TODO
 	}
-	
+
 	/**
 	 * Executes this action.
 	 * 
 	 * @param e
-	 *           DOCUMENT ME!
+	 *            DOCUMENT ME!
 	 */
 	public void actionPerformed(ActionEvent e) {
 		Graph sourceGraph = getGraph();
-		
+
 		Selection selection = getSelection();
-		
+
 		// for all edges we also include the source and target nodes to the selection
 		for (Edge edge : selection.getEdges()) {
 			selection.add(edge.getSource());
 			selection.add(edge.getTarget());
 		}
-		
+
 		doCopyGraphMethodImproved(sourceGraph, selection);
 	}
-	
+
 	public static void doCopyGraph(Graph sourceGraph, Selection selection) {
 		AdjListGraph copyGraph = new AdjListGraph(sourceGraph, new ListenerManager());
-		
+
 		try {
 			String ext = "gml";
 			IOManager ioManager = MainFrame.getInstance().getIoManager();
 			OutputSerializer os = ioManager.createOutputSerializer("." + ext);
 			new StringBuffer();
 			ByteArrayOutputStream baos = new ByteArrayOutputStream();
-			
+
 			if (selection.getNodes().size() > 0) {
 				// remove all other nodes from copied graph
 				ArrayList<Long> validNodeIds = new ArrayList<Long>();
 				for (org.graffiti.graph.Node n : selection.getNodes())
-					validNodeIds.add(new Long(n.getID()));
-				
+					validNodeIds.add(Long.valueOf(n.getID()));
+
 				ArrayList<org.graffiti.graph.Node> toBeDeleted = new ArrayList<org.graffiti.graph.Node>();
 				for (org.graffiti.graph.Node n : copyGraph.getNodes()) {
-					if (!validNodeIds.contains(new Long(n.getID()))) {
+					if (!validNodeIds.contains(Long.valueOf(n.getID()))) {
 						toBeDeleted.add(n);
 					}
 				}
@@ -119,11 +119,8 @@ public class CopyAction extends SelectionAction {
 			}
 			os.write(baos, copyGraph);
 			ClipboardService.writeToClipboardAsText(baos.toString());
-			MainFrame.showMessage(copyGraph.getNodes().size()
-								+ " node(s) and "
-								+ copyGraph.getEdges().size()
-								+ " edge(s) copied to clipboard",
-								MessageType.INFO, 3000);
+			MainFrame.showMessage(copyGraph.getNodes().size() + " node(s) and " + copyGraph.getEdges().size()
+					+ " edge(s) copied to clipboard", MessageType.INFO, 3000);
 		} catch (IOException ioe) {
 			ErrorMsg.addErrorMessage(ioe.getLocalizedMessage());
 		} catch (IllegalAccessException iae) {
@@ -132,12 +129,13 @@ public class CopyAction extends SelectionAction {
 			ErrorMsg.addErrorMessage(ie.getLocalizedMessage());
 		}
 	}
-	
+
 	public static void doCopyGraphMethodImproved(Graph sourceGraph, Selection selection) {
 		doCopyGraphMethodImproved(sourceGraph, selection, false);
 	}
-	
-	public static Graph doCopyGraphMethodImproved(Graph sourceGraph, Selection selection, boolean returnGraphInsteadPastingInClipboard) {
+
+	public static Graph doCopyGraphMethodImproved(Graph sourceGraph, Selection selection,
+			boolean returnGraphInsteadPastingInClipboard) {
 		String ext = "gml";
 		OutputSerializer os = null;
 		try {
@@ -149,12 +147,12 @@ public class CopyAction extends SelectionAction {
 			return null;
 		}
 	}
-	
-	public static Graph doCopyGraphMethodImproved(Graph sourceGraph, Selection selection, boolean returnGraphInsteadPastingInClipboard, OutputSerializer os)
-			throws IOException {
-		
+
+	public static Graph doCopyGraphMethodImproved(Graph sourceGraph, Selection selection,
+			boolean returnGraphInsteadPastingInClipboard, OutputSerializer os) throws IOException {
+
 		Graph resultGraph = new AdjListGraph(new ListenerManager());
-		
+
 		new StringBuffer();
 		Collection<Node> selNodes = selection.getNodes();
 		if (selNodes.size() > 0 && selNodes.size() != sourceGraph.getNumberOfNodes()) {
@@ -167,7 +165,7 @@ public class CopyAction extends SelectionAction {
 					tg.getAttribute(a.getId()).setValue(a.getValue());
 				}
 			}
-			
+
 			HashMap<Node, Node> sourceGraphNode2resultGraphNode = new HashMap<Node, Node>();
 			for (Node n : selection.getNodes()) {
 				Node newNode = resultGraph.addNodeCopy(n);
@@ -194,41 +192,39 @@ public class CopyAction extends SelectionAction {
 			StringWriter sw = new StringWriter();
 			((SupportsWriterOutput) os).write(sw, resultGraph);
 			ClipboardService.writeToClipboardAsText(sw.toString());
-			
+
 		} else {
 			ByteArrayOutputStream baos = new ByteArrayOutputStream();
 			os.write(baos, resultGraph);
 			ClipboardService.writeToClipboardAsText(baos.toString());
 		}
-		MainFrame.showMessage(resultGraph.getNumberOfNodes()
-								+ " node(s) and "
-								+ resultGraph.getNumberOfEdges()
-								+ " edge(s) copied to clipboard",
-								MessageType.INFO, 3000);
-		
+		MainFrame.showMessage(resultGraph.getNumberOfNodes() + " node(s) and " + resultGraph.getNumberOfEdges()
+				+ " edge(s) copied to clipboard", MessageType.INFO, 3000);
+
 		return null;
 	}
-	
+
 	/**
-	 * Sets the internal <code>enable</code> flag, which depends on the given
-	 * list of selected items.
+	 * Sets the internal <code>enable</code> flag, which depends on the given list
+	 * of selected items.
 	 * 
 	 * @param items
-	 *           the items, which determine the internal state of the <code>enable</code> flag.
+	 *            the items, which determine the internal state of the
+	 *            <code>enable</code> flag.
 	 */
 	@Override
 	protected void enable(List<?> items) {
 	}
-	
+
 	/*
 	 * (non-Javadoc)
+	 * 
 	 * @see org.graffiti.plugin.actions.SelectionAction#isEnabled()
 	 */
 	@Override
 	public boolean isEnabled() {
 		try {
-			Graph sourceGraph = MainFrame.getInstance().getActiveEditorSession()
-								.getGraph();
+			Graph sourceGraph = MainFrame.getInstance().getActiveEditorSession().getGraph();
 			return sourceGraph.getNumberOfNodes() > 0;
 		} catch (NullPointerException npe) {
 			return false;
