@@ -35,24 +35,24 @@ import org.graffiti.selection.Selection;
  */
 public class CutAction extends SelectionAction {
 	// ~ Constructors ===========================================================
-	
+
 	/**
 	 * Comment for <code>serialVersionUID</code>
 	 */
 	private static final long serialVersionUID = 1L;
-	
+
 	/**
 	 * Constructs a new cut action.
 	 * 
 	 * @param mainFrame
-	 *           DOCUMENT ME!
+	 *            DOCUMENT ME!
 	 */
 	public CutAction(MainFrame mainFrame) {
 		super("edit.cut", mainFrame);
 	}
-	
+
 	// ~ Methods ================================================================
-	
+
 	/**
 	 * Returns the help context for the action.
 	 * 
@@ -62,53 +62,53 @@ public class CutAction extends SelectionAction {
 	public HelpContext getHelpContext() {
 		return null; // TODO
 	}
-	
+
 	/**
 	 * Executes this action.
 	 * 
 	 * @param e
-	 *           DOCUMENT ME!
+	 *            DOCUMENT ME!
 	 */
 	public void actionPerformed(ActionEvent e) {
 		Graph sourceGraph = getGraph();
-		
+
 		Selection selection = getSelection();
-		if(selection.isEmpty())
+		if (selection.isEmpty())
 			return;
 		AdjListGraph copyGraph = new AdjListGraph(sourceGraph, new ListenerManager());
-		
+
 		try {
 			String ext = "gml";
 			IOManager ioManager = MainFrame.getInstance().getIoManager();
 			OutputSerializer os = ioManager.createOutputSerializer("." + ext);
 			new StringBuffer();
 			ByteArrayOutputStream baos = new ByteArrayOutputStream();
-			
-			if (selection.getElements().size() > 0 /*selection.getNodes().size() > 0*/) {
-				
+
+			if (selection.getElements().size() > 0 /* selection.getNodes().size() > 0 */) {
+
 				// remove all other nodes from copied graph
 				ArrayList<Long> validNodeIds = new ArrayList<Long>();
 				for (org.graffiti.graph.Node n : selection.getNodes())
-					validNodeIds.add(new Long(n.getID()));
-				
+					validNodeIds.add(Long.valueOf(n.getID()));
+
 				ArrayList<org.graffiti.graph.Node> toBeDeleted = new ArrayList<org.graffiti.graph.Node>();
 				for (org.graffiti.graph.Node n : copyGraph.getNodes()) {
-					if (!validNodeIds.contains(new Long(n.getID()))) {
+					if (!validNodeIds.contains(Long.valueOf(n.getID()))) {
 						toBeDeleted.add(n);
 					}
 				}
 				for (org.graffiti.graph.Node n : toBeDeleted) {
 					copyGraph.deleteNode(n);
 				}
-				
-			// remove all other edges from copied graph
+
+				// remove all other edges from copied graph
 				ArrayList<Long> validEdgeIds = new ArrayList<Long>();
 				for (Edge curEdge : copyGraph.getEdges())
-					validEdgeIds.add(new Long(curEdge.getID()));
-				
+					validEdgeIds.add(Long.valueOf(curEdge.getID()));
+
 				ArrayList<Edge> toBeDeletedEdges = new ArrayList<Edge>();
 				for (Edge curEdge : copyGraph.getEdges()) {
-					if (!validEdgeIds.contains(new Long(curEdge.getID()))) {
+					if (!validEdgeIds.contains(Long.valueOf(curEdge.getID()))) {
 						toBeDeletedEdges.add(curEdge);
 					}
 				}
@@ -118,25 +118,24 @@ public class CutAction extends SelectionAction {
 			}
 			// removed cut-action, when no elements are selected
 			/*
-			  else
-				selection.addAll(getGraph().getGraphElements());
+			 * else selection.addAll(getGraph().getGraphElements());
 			 */
-			
+
 			os.write(baos, copyGraph);
 			ClipboardService.writeToClipboardAsText(baos.toString());
 			/*
-			 * this code didn't use the Undo Manager so it's outcommented
-			 * Now CTRL+X and a following CTRL+Z (undo) works
+			 * this code didn't use the Undo Manager so it's outcommented Now CTRL+X and a
+			 * following CTRL+Z (undo) works
 			 */
-/*
-			ArrayList<GraphElement> del = new ArrayList<GraphElement>();
-			del.addAll(selection.getElements());
-			selection.clear();
-			getGraph().deleteAll(del);
-			MainFrame.getInstance().getSessionManager().getActiveSession().getActiveView().repaint(null);
-*/
+			/*
+			 * ArrayList<GraphElement> del = new ArrayList<GraphElement>();
+			 * del.addAll(selection.getElements()); selection.clear();
+			 * getGraph().deleteAll(del);
+			 * MainFrame.getInstance().getSessionManager().getActiveSession().getActiveView(
+			 * ).repaint(null);
+			 */
 			GraffitiAction.performAction("edit.delete");
-			
+
 		} catch (IOException ioe) {
 			ErrorMsg.addErrorMessage(ioe.getLocalizedMessage());
 		} catch (IllegalAccessException iae) {
@@ -144,29 +143,30 @@ public class CutAction extends SelectionAction {
 		} catch (InstantiationException ie) {
 			ErrorMsg.addErrorMessage(ie.getLocalizedMessage());
 		}
-		
+
 	}
-	
+
 	/**
-	 * Sets the internal <code>enable</code> flag, which depends on the given
-	 * list of selected items.
+	 * Sets the internal <code>enable</code> flag, which depends on the given list
+	 * of selected items.
 	 * 
 	 * @param items
-	 *           the items, which determine the internal state of the <code>enable</code> flag.
+	 *            the items, which determine the internal state of the
+	 *            <code>enable</code> flag.
 	 */
 	@Override
 	protected void enable(List<?> items) {
 	}
-	
+
 	/*
 	 * (non-Javadoc)
+	 * 
 	 * @see org.graffiti.plugin.actions.SelectionAction#isEnabled()
 	 */
 	@Override
 	public boolean isEnabled() {
 		try {
-			Graph sourceGraph = MainFrame.getInstance().getActiveEditorSession()
-								.getGraph();
+			Graph sourceGraph = MainFrame.getInstance().getActiveEditorSession().getGraph();
 			return sourceGraph.getNumberOfNodes() > 0;
 		} catch (NullPointerException npe) {
 			return false;
