@@ -47,7 +47,7 @@ public class PieChartDemo5 extends ApplicationFrame {
 	 * Creates a new demo instance.
 	 * 
 	 * @param title
-	 *           the frame title.
+	 *            the frame title.
 	 */
 	public PieChartDemo5(final String title) {
 		super(title);
@@ -65,12 +65,12 @@ public class PieChartDemo5 extends ApplicationFrame {
 	 */
 	private PieDataset createDataset() {
 		final DefaultPieDataset dataset = new DefaultPieDataset();
-		dataset.setValue("One", new Double(43.2));
-		dataset.setValue("Two", new Double(10.0));
-		dataset.setValue("Three", new Double(27.5));
-		dataset.setValue("Four", new Double(17.5));
-		dataset.setValue("Five", new Double(11.0));
-		dataset.setValue("Six", new Double(19.4));
+		dataset.setValue("One", Double.valueOf(43.2));
+		dataset.setValue("Two", Double.valueOf(10.0));
+		dataset.setValue("Three", Double.valueOf(27.5));
+		dataset.setValue("Four", Double.valueOf(17.5));
+		dataset.setValue("Five", Double.valueOf(11.0));
+		dataset.setValue("Six", Double.valueOf(19.4));
 		return dataset;
 	}
 
@@ -89,18 +89,15 @@ public class PieChartDemo5 extends ApplicationFrame {
 	 * Creates a chart.
 	 * 
 	 * @param dataset
-	 *           the dataset.
+	 *            the dataset.
 	 * @return a chart.
 	 */
 	private JFreeChart createChart(final PieDataset dataset) {
 
-		final JFreeChart chart = ChartFactory.createPieChart(
-							"Pie Chart Demo 5", // chart title
+		final JFreeChart chart = ChartFactory.createPieChart("Pie Chart Demo 5", // chart title
 				dataset, // data
 				false, // include legend
-				true,
-							false
-							);
+				true, false);
 
 		final PiePlot plot = (PiePlot) chart.getPlot();
 		plot.setInteriorGap(0.0);
@@ -113,7 +110,7 @@ public class PieChartDemo5 extends ApplicationFrame {
 	 * Starting point for the demonstration application.
 	 * 
 	 * @param args
-	 *           ignored.
+	 *            ignored.
 	 */
 	public static void main(final String[] args) {
 
